Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -234,7 +234,13 @@
     "center": "Centre",
     "certificate": "Certificat",
     "change": "Canviar",
+    "change-customer": "Canviar client",
     "change-password-online-warning": "Si aquesta instal·lació estarà en línia, hauria de canviar la contrasenya per una de més segura.",
+    "change-warehouse": "Canviar magatzem",
+    "changed-agent-to": "S'ha canviat l'agent %oldAgent% per l'agent %newAgent%",
+    "changed-customer-to": "S'ha canviat el client %oldCustomer% pel client %newCustomer%",
+    "changed-status-to": "Canvi d'estat abans %oldStatus%, ara %newStatus%",
+    "changed-user-to": "S'ha canviat l'usuari %oldUser% per l'usuari %newUser%",
     "channel": "Canal",
     "charge": "Cobrar",
     "charge-date": "Data càrrec",
@@ -338,6 +344,7 @@
     "convert-into-supplier": "Convertir en proveïdor",
     "cookies": "Galetes",
     "copy": "Copiar",
+    "copy-attachments": "Copiar fitxers adjunts",
     "copy-p": "Empleni el formulari per a fer una còpia d'aquest model",
     "copy-subaccounts": "Copiar pla de comptes",
     "core-update": "Actualització del nucli a la versió %version%",
@@ -490,6 +497,7 @@
     "different-than": "Diferent que",
     "disable": "Desactivar",
     "disable-plugins": "Desactivar els plugins",
+    "disable-stock-management": "No controlar estoc (en feines)",
     "disabled": "S'ha desactivat",
     "disabled-plugins": "Plugins desactivats",
     "discharge-date": "Data d'emissió: %date%",
@@ -526,6 +534,7 @@
     "drag": "Arrossegar",
     "dto": "Dte.",
     "dto-2": "Dte. 2",
+    "duplicate-customer-name-or-cif": "Hi ha un client amb el mateix nom o CIF\/NIF",
     "duplicate-record": "Registre Duplicat",
     "duplicated-reference": "Referència '%reference%' duplicada",
     "duplicated-request": "Petició duplicada",
@@ -714,6 +723,7 @@
     "from": "Des de",
     "from-accounting-entry": "Des d'assentament",
     "from-date": "Des de",
+    "from-hour": "Hora inici",
     "from-subaccount": "Des de subcompte",
     "full-access": "Accés complet",
     "full-path": "Ruta completa",
@@ -725,6 +735,8 @@
     "generate-accounting-entries": "Generar asientos",
     "generate-accounting-entry": "fer assentament comptable",
     "generate-doc-type": "Generar tipus de document",
+    "generate-document": "Generar document",
+    "generate-document-desc": "Afegeix una línia al principi del document amb la informació seleccionada",
     "generate-invoice": "Fer factura",
     "generate-receipts": "Generar rebuts",
     "generate-settlements": "Generar liquidacions",
@@ -988,6 +1000,7 @@
     "mail-test-ok": "Resposta satisfactòria per correu electrònic",
     "mailer": "Controlador de correu",
     "main-address": "Adreça principal",
+    "make-invoice": "Fer factura",
     "manage": "Administrar",
     "manage-installation": "Administrar",
     "manual": "Manual",
@@ -1089,6 +1102,7 @@
     "nick": "Sobrenom",
     "no": "No",
     "no-admin": "No administrador",
+    "no-agent": "Sense agent",
     "no-data": "No hi ha dades",
     "no-data-received-form": "Cap dada rebuda per formulari",
     "no-devices-detected-scan-usb": "No s'han detectat dispositius. Proveu a escanejar.",
@@ -1104,6 +1118,7 @@
     "no-selected-item": "Cap element seleccionat",
     "no-stock": "No controlar stock",
     "no-updates-now": "No hi ha actualitzacions en aquest moment",
+    "no-works-to-invoice": "No hi ha treballs per facturar",
     "non-editable-accounting-entry": "Assentament no editable",
     "non-editable-columns": "Columnes no editables: %columns%",
     "non-editable-document": "Document no editable",
@@ -1128,6 +1143,7 @@
     "notices": "Avisos",
     "notification": "Notificació",
     "notifications": "Notificacions",
+    "notified": "Notificat",
     "november": "Novembre",
     "number": "Número",
     "number-attachments": "Núm. d'adjunts",
@@ -1159,6 +1175,7 @@
     "operator": "Operador",
     "option": "Opció",
     "optional": "Opcional",
+    "optional-or-product": "Opcional. Si no s'escriu res, s'usarà del producte.",
     "options": "Opcions",
     "options-button-header": "Maquetació i permisos",
     "order": "Comanda",
@@ -1290,6 +1307,11 @@
     "print-price": "Imprimir preus",
     "print-quantity": "Imprimir quantitat",
     "print-ticket": "Imprimir tiquet",
+    "print-works": "Imprimir treballs",
+    "print-works-description": "Imprimir descripció de treballs",
+    "print-works-price": "Imprimir preu de treballs",
+    "print-works-quantity": "Imprimir quantitat kskkdy km jdmfkelllwhek y como no qude treballs",
+    "print-works-reference": "Imprimir referència de treballs",
     "printed": "Imprès",
     "printing-format": "Format d'impressió",
     "printing-formats": "Formats d'impressió",
@@ -1406,6 +1428,7 @@
     "reset": "La configuració s'ha reiniciat correctament.",
     "resource": "Recurs",
     "respond": "Respondre",
+    "responsible": "Responsable",
     "restore": "Restaurar",
     "restore-data": "Restaura les dades",
     "result": "Resultat",
@@ -1434,10 +1457,12 @@
     "scan-usb-devices": "Escanejar dispositius USB",
     "sdk": "SDK",
     "search": "Cercar",
+    "search-customer": "Cercar client",
     "search-document": "Escriu el número de %doctype% per cercar.",
     "search-in-all-pages": "Cerca a totes les pàgines del programa",
     "search-message": "Buscar missatge",
     "search-product": "Cercar producte",
+    "searching": "Buscant",
     "seats": "Places",
     "second-hand": "Segona mà",
     "second-quarter": "2n trimestre",
@@ -1518,6 +1543,7 @@
     "soap-extension-not-installed": "L'extensió SOAP no està activada al PHP. Contacta amb el teu proveïdor de hosting per activar-la.",
     "social-security-number": "Nombre Seguretat Social",
     "software": "Software",
+    "solution": "Solució",
     "sort": "Ordre",
     "sort-by-balance-asc": "Ordenar per saldo ascendent",
     "sort-by-balance-desc": "Ordenar per saldo descendent",
@@ -1586,6 +1612,7 @@
     "subject": "Assumpte",
     "subtotal": "Subtotal",
     "subtract": "Restar",
+    "subtract-stock": "Restar estoc",
     "success": "Èxit",
     "successive-tract": "Lliurament encadenat",
     "sum": "Suma",
@@ -1642,6 +1669,7 @@
     "tax-debit-account": "Compte de dèbit per a impostos",
     "tax-transport": "Impostos del transport",
     "taxes": "Impostos",
+    "tel": "Tel.",
     "telemetry-data-to-send": "Les instal·lacions registrades notifiquen periòdicament la versió de FacturaScripts, PHP, país, idioma i llistat de plugins.",
     "telephone-prefix": "Prefix telefònic",
     "template": "Plantilla",
@@ -1737,6 +1765,7 @@
     "unsafe-file-p": "Per motius de seguretat impedim les descàrregues d'alguns tipus d'arxius, com aquest: %file%",
     "until-accounting-entry": "Fins a assentament",
     "until-date": "Fins (data)",
+    "until-hour": "Hora fi",
     "until-subaccount": "Fins a subcompte",
     "update": "Actualitzar",
     "update-stock": "Actualitzar estoc",
@@ -1778,6 +1807,7 @@
     "vat-document": "Document",
     "vat-exception": "Excepció d'IVA",
     "vat-number-is-short": "El número '%vat-*number%' és massa curt",
+    "vat-number-not-valid": "%vat-number% no està registrat al VIES",
     "vat-number-not-vies": "El número '%vat-*number%' no està registrat en el sistema VIES",
     "vat-regime": "Règim de l'IVA",
     "VAT-register": "Impostos",
@@ -1819,6 +1849,7 @@
     "wizard": "Wizard",
     "wizard-p": "Empleni aquest formulari sobre el seu negoci per a acabar la configuració.",
     "wizard-plugins": "Un plugin és un complement que afegeix noves funcionalitats. Selecciona els plugins que vulguis activar immediatament, o fes-ho més tard des del panell de control.",
+    "work": "Treball",
     "work-certification": "Certificació",
     "work-events": "Esdeveniments de treball",
     "working-hours": "Horari de treball",
