--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -234,7 +234,13 @@
     "center": "Mitte",
     "certificate": "Zertifikat",
     "change": "Veränderung",
+    "change-customer": "Kunden wechseln",
     "change-password-online-warning": "Wenn dieses System online sein soll, sollten Sie das Passwort durch ein sicheres ersetzen.",
+    "change-warehouse": "Lager wechseln",
+    "changed-agent-to": "Agent %oldAgent% wurde zu Agent %newAgent% geändert",
+    "changed-customer-to": "Kunde wurde von %oldCustomer% auf %newCustomer% geändert",
+    "changed-status-to": "Status geändert, vorher %oldStatus%, jetzt %newStatus%",
+    "changed-user-to": "Benutzer wurde von %oldUser% zu %newUser% geändert",
     "channel": "Kanal",
     "charge": "Aufladen",
     "charge-date": "Belastungsdatum",
@@ -338,6 +344,7 @@
     "convert-into-supplier": "In Lieferant umwandeln",
     "cookies": "Cookies",
     "copy": "kopieren",
+    "copy-attachments": "Dateianhänge kopieren",
     "copy-p": "Füllen Sie das Formular aus, um eine Kopie dieses Modells zu erstellen",
     "copy-subaccounts": "Kontenplan kopieren",
     "core-update": "Kernel-Update auf Version %version%",
@@ -490,6 +497,7 @@
     "different-than": "Anders als",
     "disable": "deaktivieren",
     "disable-plugins": "Plugins deaktivieren",
+    "disable-stock-management": "Keine Lagerverwaltung (bei Aufträgen)",
     "disabled": "Behindert",
     "disabled-plugins": "Deaktivierte Plugins",
     "discharge-date": "Entladedatum: 0",
@@ -526,6 +534,7 @@
     "drag": "Ziehen",
     "dto": "Scheibe.",
     "dto-2": "Rabatt-2",
+    "duplicate-customer-name-or-cif": "Es gibt einen Kunden mit dem gleichen Namen oder CIF\/NIF",
     "duplicate-record": "Eintrag doppelt",
     "duplicated-reference": "Doppelte Referenz '%reference%'",
     "duplicated-request": "Antrag doppelt",
@@ -588,7 +597,7 @@
     "error-write-cert": "Fehler beim Schreiben des Zertifikats",
     "errors": "Fehler",
     "es_EC": "es_EC",
-    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-added-value": "Umsatzsteuerpflichtige Leistung",
     "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
     "es-operation-tax-igic": "Vorgang unterliegt dem IGIC (Kanarische Inseln)",
     "es-operation-tax-other": "es-operation-tax-other",
@@ -714,6 +723,7 @@
     "from": "von",
     "from-accounting-entry": "von Buchungseintrag",
     "from-date": "von Datum",
+    "from-hour": "Startzeit",
     "from-subaccount": "von Unterkonto",
     "full-access": "voller Zugriff",
     "full-path": "vollständigen Pfad",
@@ -725,6 +735,8 @@
     "generate-accounting-entries": "Buchungssätze generieren",
     "generate-accounting-entry": "Buchung erstellen",
     "generate-doc-type": "Dokumententyp erstellen",
+    "generate-document": "Dokument generieren",
+    "generate-document-desc": "Fügen Sie am Anfang des Dokuments eine Zeile mit den ausgewählten Informationen hinzu.",
     "generate-invoice": "Rechnung erstellen",
     "generate-receipts": "Belege erstellen",
     "generate-settlements": "Abrechnungen erstellen",
@@ -988,6 +1000,7 @@
     "mail-test-ok": "Erfolgreicher E-Mail-Test",
     "mailer": "Mail-Controller",
     "main-address": "Hauptadresse",
+    "make-invoice": "Rehnung erstellen",
     "manage": "Verwalten",
     "manage-installation": "Verwalten",
     "manual": "Handbuch",
@@ -1089,6 +1102,7 @@
     "nick": "Kerbe",
     "no": "nicht",
     "no-admin": "Kein Administrator",
+    "no-agent": "Kein Agent",
     "no-data": "Keine Daten",
     "no-data-received-form": "Keine Daten vom Formular erhalten",
     "no-devices-detected-scan-usb": "Es wurden keine Geräte erkannt. Bitte versuchen Sie einen Scan.",
@@ -1104,6 +1118,7 @@
     "no-selected-item": "Keine Elemente ausgewählt",
     "no-stock": "Kein Bestand",
     "no-updates-now": "Es gibt derzeit keine Updates.",
+    "no-works-to-invoice": "Keine Arbeiten zur Rechnungsstellung",
     "non-editable-accounting-entry": "Nicht bearbeitbarer Buchungseintrag",
     "non-editable-columns": "Nicht bearbeitbare Spalten: %columns%",
     "non-editable-document": "Nicht bearbeitbares Dokument",
@@ -1128,6 +1143,7 @@
     "notices": "Bemerkungen",
     "notification": "Benachrichtigung",
     "notifications": "Benachrichtigungen",
+    "notified": "Benachrichtigt",
     "november": "November",
     "number": "Nummer",
     "number-attachments": "Anzahl der Anhänge",
@@ -1159,6 +1175,7 @@
     "operator": "Bediener",
     "option": "Option",
     "optional": "optional",
+    "optional-or-product": "Optional. Wenn nichts eingegeben wird, werden die Informationen des Produkts verwendet.",
     "options": "Optionen",
     "options-button-header": "Layout und Berechtigungen",
     "order": "bestellen",
@@ -1290,6 +1307,11 @@
     "print-price": "Preise drucken",
     "print-quantity": "Druckmenge",
     "print-ticket": "Ticket drucken",
+    "print-works": "print-works",
+    "print-works-description": "Drucken Sie die Arbeitsbeschreibung",
+    "print-works-price": "Preis für Arbeiten drucken",
+    "print-works-quantity": "Anzahl der Arbeiten drucken",
+    "print-works-reference": "Arbeitsreferenz drucken",
     "printed": "gedruckt",
     "printing-format": "Druckformat",
     "printing-formats": "Druckformate",
@@ -1406,6 +1428,7 @@
     "reset": "Einstellungen erfolgreich zurückgesetzt, drücken Sie <a href=\" %1$s#avanzado\">hier<\/a> um fortzusetzen.",
     "resource": "Ressource",
     "respond": "Antworten",
+    "responsible": "Verantwortlich",
     "restore": "Wiederherstellen",
     "restore-data": "Daten wiederherstellen",
     "result": "Ergebnis",
@@ -1434,10 +1457,12 @@
     "scan-usb-devices": "USB-Geräte scannen",
     "sdk": "SDK",
     "search": "Suche",
+    "search-customer": "Kunden suchen",
     "search-document": "Geben Sie die Nummer von %doctype% ein, um zu suchen.",
     "search-in-all-pages": "In allen Seiten des Programms suchen",
     "search-message": "Nachricht suchen",
     "search-product": "Produkt suchen",
+    "searching": "Suche",
     "seats": "Sitzplätze",
     "second-hand": "Z",
     "second-quarter": "Zweites Quartal",
@@ -1518,14 +1543,15 @@
     "soap-extension-not-installed": "Die SOAP-Erweiterung ist in PHP nicht aktiviert. Bitte wenden Sie sich an Ihren Hosting-Anbieter, um sie zu aktivieren.",
     "social-security-number": "Sozialversicherungsnummer",
     "software": "Software",
+    "solution": "Lösung",
     "sort": "Reihenfolge",
     "sort-by-balance-asc": "Nach Saldo aufsteigend sortieren",
     "sort-by-balance-desc": "Nach Saldo absteigend sortieren",
     "sort-by-code-asc": "Nach Code aufsteigend sortieren",
-    "sort-by-code-desc": "Ordenar por código descendente",
+    "sort-by-code-desc": "Nach Code absteigend sortieren",
     "sort-by-column": "Nach Spalte sortieren",
     "sort-by-credit-asc": "Nach Haben aufsteigend sortieren",
-    "sort-by-credit-desc": "Ordenar por haber descendente",
+    "sort-by-credit-desc": "Nach Haben absteigend sortieren",
     "sort-by-date-asc": "Nach Datum aufsteigend sortieren",
     "sort-by-date-desc": "Nach Datum absteigend sortieren",
     "sort-by-debit-asc": "Nach Soll aufsteigend sortieren",
@@ -1586,6 +1612,7 @@
     "subject": "Betreff",
     "subtotal": "Zwischensumme",
     "subtract": "Subtrahieren",
+    "subtract-stock": "Bestand abziehen",
     "success": "Erfolg",
     "successive-tract": "sukzessiver Abschnitt",
     "sum": "Summe",
@@ -1642,6 +1669,7 @@
     "tax-debit-account": "Steuerlastschriftkonto",
     "tax-transport": "Steuerverkehr",
     "taxes": "Steuern",
+    "tel": "Tel.",
     "telemetry-data-to-send": "Die registrierten Installationen melden regelmäßig die Version von FacturaScripts, PHP, Land, Sprache und Plugin-Liste.",
     "telephone-prefix": "Telefonvorwahl",
     "template": "Vorlage",
@@ -1737,6 +1765,7 @@
     "unsafe-file-p": "Aus Sicherheitsgründen verhindern wir das Herunterladen bestimmter Dateitypen, wie diesen: %file%",
     "until-accounting-entry": "Bis Buchung",
     "until-date": "bis-Datum",
+    "until-hour": "bis zur Stunde",
     "until-subaccount": "Bis Unterkonto",
     "update": "aktuallisieren",
     "update-stock": "Lagerbestand aktualisieren",
@@ -1778,6 +1807,7 @@
     "vat-document": "Steuerdokument",
     "vat-exception": "USt-Ausnahme",
     "vat-number-is-short": "Die Nummer '%vat-number%' ist zu kurz",
+    "vat-number-not-valid": "%vat-number% no está registrado en el VIES",
     "vat-number-not-vies": "Die Nummer '%vat-number%' ist nicht im VIES-System registriert",
     "vat-regime": "MwSt-Regelung",
     "VAT-register": "Steuerbuch",
@@ -1819,6 +1849,7 @@
     "wizard": "Asistent",
     "wizard-p": "Füllen Sie dieses Formular zu Ihrem Unternehmen aus, um die Konfiguration abzuschließen.",
     "wizard-plugins": "Ein Plugin ist eine Ergänzung, die neue Funktionalitäten hinzufügt. Wählen Sie die Plugins aus, die Sie sofort aktivieren möchten, oder tun Sie dies später über die Systemsteuerung.",
+    "work": "Arbeit",
     "work-certification": "Zertifizierung",
     "work-events": "Arbeitsevents",
     "working-hours": "Arbeitszeit",
