--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -234,7 +234,13 @@
     "center": "Center",
     "certificate": "Certificate",
     "change": "Change",
+    "change-customer": "Change customer",
     "change-password-online-warning": "If this installation is going to be online, you should change the password to a more secure one.",
+    "change-warehouse": "Change warehouse",
+    "changed-agent-to": "Changed agent %oldAgent% to agent %newAgent%",
+    "changed-customer-to": "Customer %oldCustomer% has been changed to customer %newCustomer%",
+    "changed-status-to": "Change of status, before %oldStatus%, now %newStatus%",
+    "changed-user-to": "The user %oldUser% has been changed to the user %newUser%",
     "channel": "Channel",
     "charge": "Charge",
     "charge-date": "Charge date",
@@ -338,6 +344,7 @@
     "convert-into-supplier": "Convert into supplier",
     "cookies": "Cookies",
     "copy": "Copy",
+    "copy-attachments": "Copy attachments",
     "copy-p": "Fill in the form to make a copy of this model",
     "copy-subaccounts": "Copy account plan",
     "core-update": "Core update to version %version%",
@@ -490,6 +497,7 @@
     "different-than": "Different than",
     "disable": "Disable",
     "disable-plugins": "Disable plugins",
+    "disable-stock-management": "Do not control stock (in jobs)",
     "disabled": "Disabled",
     "disabled-plugins": "Disabled plugins",
     "discharge-date": "Discharge date: %date%",
@@ -526,6 +534,7 @@
     "drag": "Drag",
     "dto": "Disc.",
     "dto-2": "Discount 2",
+    "duplicate-customer-name-or-cif": "A customer with the same name or VAT number exists",
     "duplicate-record": "Duplicated record",
     "duplicated-reference": "Reference '%reference%' duplicated",
     "duplicated-request": "Duplicated request",
@@ -714,6 +723,7 @@
     "from": "From",
     "from-accounting-entry": "From entry",
     "from-date": "from-date",
+    "from-hour": "From hour",
     "from-subaccount": "From subaccount",
     "full-access": "Full access",
     "full-path": "Full path",
@@ -725,6 +735,8 @@
     "generate-accounting-entries": "Generate accounting entries",
     "generate-accounting-entry": "Generate accounting entry",
     "generate-doc-type": "Generate document type",
+    "generate-document": "Generate document",
+    "generate-document-desc": "Add a line at the beginning of the document with the selected information",
     "generate-invoice": "Generate invoice",
     "generate-receipts": "Generate receipts",
     "generate-settlements": "Generate settlements",
@@ -988,6 +1000,7 @@
     "mail-test-ok": "Satisfactory email proof",
     "mailer": "Mail controller",
     "main-address": "Main address",
+    "make-invoice": "Make invoice",
     "manage": "Manage",
     "manage-installation": "Manage",
     "manual": "Manual",
@@ -1089,6 +1102,7 @@
     "nick": "Nick",
     "no": "No",
     "no-admin": "Not an administrator",
+    "no-agent": "No agent",
     "no-data": "No data",
     "no-data-received-form": "Ningún dato recibido por formulario",
     "no-devices-detected-scan-usb": "No devices detected. Please try scanning.",
@@ -1104,6 +1118,7 @@
     "no-selected-item": "No selected item",
     "no-stock": "Do not control stock",
     "no-updates-now": "No updates at this time.",
+    "no-works-to-invoice": "There are no jobs to invoice",
     "non-editable-accounting-entry": "Non-editable accounting entry",
     "non-editable-columns": "Non editable columns: %columns%",
     "non-editable-document": "Non editable document",
@@ -1128,6 +1143,7 @@
     "notices": "Notices",
     "notification": "Notification",
     "notifications": "Notifications",
+    "notified": "Notified",
     "november": "November",
     "number": "Number",
     "number-attachments": "No. of attachments",
@@ -1159,6 +1175,7 @@
     "operator": "Operator",
     "option": "Option",
     "optional": "optional",
+    "optional-or-product": "Optional. If nothing is written, it will be used from the product.",
     "options": "Options",
     "options-button-header": "Layout and permissions",
     "order": "Order",
@@ -1290,6 +1307,11 @@
     "print-price": "Print prices",
     "print-quantity": "Print quantity",
     "print-ticket": "Print ticket",
+    "print-works": "Print works",
+    "print-works-description": "Print job description",
+    "print-works-price": "Print job price",
+    "print-works-quantity": "Print job quantity",
+    "print-works-reference": "Print job reference",
     "printed": "Printed",
     "printing-format": "Printing format",
     "printing-formats": "Printing formats",
@@ -1406,6 +1428,7 @@
     "reset": "Reset",
     "resource": "Resource",
     "respond": "Reply",
+    "responsible": "Responsible",
     "restore": "Restore",
     "restore-data": "Restore data",
     "result": "Result",
@@ -1434,10 +1457,12 @@
     "scan-usb-devices": "Scan USB devices",
     "sdk": "SDK",
     "search": "Search",
+    "search-customer": "Search customer",
     "search-document": "Type the number of %doctype% to search.",
     "search-in-all-pages": "Search across all pages of the program",
     "search-message": "Search message",
     "search-product": "Search product",
+    "searching": "Searching",
     "seats": "Places",
     "second-hand": "Second hand",
     "second-quarter": "2nd Quarter",
@@ -1518,6 +1543,7 @@
     "soap-extension-not-installed": "The SOAP extension is not enabled in PHP. Contact your hosting provider to activate it.",
     "social-security-number": "Social Security number",
     "software": "Software",
+    "solution": "Solution",
     "sort": "Order",
     "sort-by-balance-asc": "Sort by ascending balance",
     "sort-by-balance-desc": "Sort by descending balance",
@@ -1586,6 +1612,7 @@
     "subject": "Subject",
     "subtotal": "Subtotal",
     "subtract": "Subtract",
+    "subtract-stock": "Subtract stock",
     "success": "Success",
     "successive-tract": "Successive Tract",
     "sum": "Sum",
@@ -1642,6 +1669,7 @@
     "tax-debit-account": "Debit account for taxes",
     "tax-transport": "Tax transport",
     "taxes": "Taxes",
+    "tel": "Phone.",
     "telemetry-data-to-send": "Registered installations periodically notify the version of FacturaScripts, PHP, country, language and list of plugins.",
     "telephone-prefix": "Telephone prefix",
     "template": "Template",
@@ -1737,6 +1765,7 @@
     "unsafe-file-p": "For security reasons, we prevent downloads of certain file types, such as this one: %file%.",
     "until-accounting-entry": "Until entry",
     "until-date": "Until date",
+    "until-hour": "Until hour",
     "until-subaccount": "Until subaccount",
     "update": "Update",
     "update-stock": "Update stock",
@@ -1778,6 +1807,7 @@
     "vat-document": "VAT Document",
     "vat-exception": "VAT Exception",
     "vat-number-is-short": "The number '%vat-number%' is too short",
+    "vat-number-not-valid": "%vat-number% is not registered in VIES",
     "vat-number-not-vies": "Number '%vat-number%' is not registered in VIES system",
     "vat-regime": "VAT Regime",
     "VAT-register": "VAT registration",
@@ -1819,6 +1849,7 @@
     "wizard": "Wizard",
     "wizard-p": "Fill out this form about your business to finish the configuration.",
     "wizard-plugins": "A plugin adds functionality. Select the plugins you want to activate immediately, or you can do it later from the control panel.",
+    "work": "Work",
     "work-certification": "Certification.",
     "work-events": "Working events",
     "working-hours": "Work schedule",
