--- a/Core/Translation/es_MX.json
+++ b/Core/Translation/es_MX.json
@@ -234,7 +234,13 @@
     "center": "Centro",
     "certificate": "Certificado",
     "change": "Cambiar",
+    "change-customer": "Cambiar cliente",
     "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
+    "change-warehouse": "Cambiar almacén",
+    "changed-agent-to": "Se ha cambiado el agente %oldAgent% por el agente %newAgent%",
+    "changed-customer-to": "Se ha cambiado el cliente %oldCustomer% por el cliente %newCustomer%",
+    "changed-status-to": "Cambio de estado, antes %oldStatus%, ahora %newStatus%",
+    "changed-user-to": "Se ha cambiado el usuario %oldUser% por el usuario %newUser%",
     "channel": "Canal",
     "charge": "Cobrar",
     "charge-date": "Fecha cargo",
@@ -338,6 +344,7 @@
     "convert-into-supplier": "Convertir en proveedor",
     "cookies": "Cookies",
     "copy": "Copiar",
+    "copy-attachments": "Copiar archivos adjuntos",
     "copy-p": "Rellene el formulario para hacer una copia de este modelo",
     "copy-subaccounts": "Copiar plan contable",
     "core-update": "Actualización del núcleo a la versión %version%",
@@ -490,6 +497,7 @@
     "different-than": "Diferente que",
     "disable": "Desactivar",
     "disable-plugins": "Desactivar plugins",
+    "disable-stock-management": "No controlar stock (en trabajos)",
     "disabled": "Desactivado",
     "disabled-plugins": "Plugins desactivados",
     "discharge-date": "Fecha de alta: %date%",
@@ -526,6 +534,7 @@
     "drag": "Arrastrar",
     "dto": "Dto.",
     "dto-2": "Dto. 2",
+    "duplicate-customer-name-or-cif": "Existe un cliente con el mismo nombre o CIF\/NIF",
     "duplicate-record": "Registro duplicado",
     "duplicated-reference": "Referencia '%reference%' duplicada",
     "duplicated-request": "Petición duplicada",
@@ -714,6 +723,7 @@
     "from": "Desde",
     "from-accounting-entry": "Desde asiento",
     "from-date": "Desde",
+    "from-hour": "Hora inicio",
     "from-subaccount": "Desde subcuenta",
     "full-access": "Acceso completo",
     "full-path": "Ruta completa",
@@ -725,6 +735,8 @@
     "generate-accounting-entries": "Generar asientos",
     "generate-accounting-entry": "Generar asiento contable",
     "generate-doc-type": "Generar tipo de documento",
+    "generate-document": "Generar documento",
+    "generate-document-desc": "Añade una línea al principio del documento con la información seleccionada",
     "generate-invoice": "Crear factura",
     "generate-receipts": "Generar recibos",
     "generate-settlements": "Generar liquidaciones",
@@ -988,6 +1000,7 @@
     "mail-test-ok": "Prueba de email ejecutada correctamente",
     "mailer": "Controlador de correo",
     "main-address": "Dirección principal",
+    "make-invoice": "Hacer factura",
     "manage": "Administrar",
     "manage-installation": "Administrar",
     "manual": "Manual",
@@ -1089,6 +1102,7 @@
     "nick": "Apodo",
     "no": "No",
     "no-admin": "No administrador",
+    "no-agent": "Sin agente",
     "no-data": "Sin datos",
     "no-data-received-form": "Ningún dato recibido por formulario",
     "no-devices-detected-scan-usb": "No se han detectado dispositivos. Pruebe a escanear.",
@@ -1104,6 +1118,7 @@
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "No controlar stock",
     "no-updates-now": "No hay actualizaciones en este momento",
+    "no-works-to-invoice": "No hay trabajos para facturar",
     "non-editable-accounting-entry": "Asiento no editable",
     "non-editable-columns": "Columnas no editables: %columns%",
     "non-editable-document": "Documento no editable",
@@ -1128,6 +1143,7 @@
     "notices": "Avisos",
     "notification": "Notificación",
     "notifications": "Notificaciones",
+    "notified": "Notificado",
     "november": "Noviembre",
     "number": "Número",
     "number-attachments": "Nº de adjuntos",
@@ -1159,6 +1175,7 @@
     "operator": "Operador",
     "option": "Opción",
     "optional": "opcional",
+    "optional-or-product": "Opcional. Si no se escribe nada se usará la información del producto.",
     "options": "Opciones",
     "options-button-header": "Maquetación y permisos",
     "order": "Pedido",
@@ -1290,6 +1307,11 @@
     "print-price": "Imprimir precios",
     "print-quantity": "Imprimir cantidad",
     "print-ticket": "Imprimir ticket",
+    "print-works": "Imprimir trabajos",
+    "print-works-description": "Imprimir descripción de trabajos",
+    "print-works-price": "Imprimir precio de trabajos",
+    "print-works-quantity": "Imprimir cantidad de trabajos",
+    "print-works-reference": "Imprimir referencia de trabajos",
     "printed": "Impreso",
     "printing-format": "Formato de impresión",
     "printing-formats": "Formatos de impresión",
@@ -1406,6 +1428,7 @@
     "reset": "Restablecer",
     "resource": "Recurso",
     "respond": "Responder",
+    "responsible": "Responsable",
     "restore": "Restaurar",
     "restore-data": "Restaurar datos",
     "result": "Resultado",
@@ -1434,10 +1457,12 @@
     "scan-usb-devices": "Escanear dispositivos USB",
     "sdk": "SDK",
     "search": "Buscar",
+    "search-customer": "Buscar cliente",
     "search-document": "Escribe el número de %doctype% para buscar.",
     "search-in-all-pages": "Busca en todas las páginas del programa",
     "search-message": "Buscar mensaje",
     "search-product": "Buscar producto",
+    "searching": "Buscando",
     "seats": "Plazas",
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
@@ -1518,6 +1543,7 @@
     "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
     "social-security-number": "Número Seguridad Social",
     "software": "Software",
+    "solution": "Solución",
     "sort": "Orden",
     "sort-by-balance-asc": "Ordenar por saldo ascendente",
     "sort-by-balance-desc": "Ordenar por saldo descendente",
@@ -1586,6 +1612,7 @@
     "subject": "Asunto",
     "subtotal": "Subtotal",
     "subtract": "Restar",
+    "subtract-stock": "Restar stock",
     "success": "Éxito",
     "successive-tract": "Entrega en cadena",
     "sum": "Suma",
@@ -1642,6 +1669,7 @@
     "tax-debit-account": "Cuenta de débito para impuestos",
     "tax-transport": "Impuestos del transporte",
     "taxes": "Impuestos",
+    "tel": "Tel.",
     "telemetry-data-to-send": "Las instalaciones registradas notifican periódicamente la versión de FacturaScripts, PHP, país, idioma y listado de plugins.",
     "telephone-prefix": "Prefijo telefónico",
     "template": "Plantilla",
@@ -1737,6 +1765,7 @@
     "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
     "until-accounting-entry": "Hasta asiento",
     "until-date": "Hasta",
+    "until-hour": "Hora fin",
     "until-subaccount": "Hasta subcuenta",
     "update": "Actualizar",
     "update-stock": "Actualizar stock",
@@ -1778,6 +1807,7 @@
     "vat-document": "Documento",
     "vat-exception": "Excepción de IVA",
     "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
+    "vat-number-not-valid": "%vat-number% no está registrado en el VIES",
     "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
     "vat-regime": "Régimen IVA",
     "VAT-register": "Libro de Impuestos",
@@ -1819,6 +1849,7 @@
     "wizard": "Asistente",
     "wizard-p": "Rellene este formulario sobre su negocio para terminar la configuración.",
     "wizard-plugins": "Un plugin es un complemento que añade nuevas funcionalidades. Selecciona los plugins que quieras activar inmediatamente, o hazlo más tarde desde el panel de control.",
+    "work": "Trabajo",
     "work-certification": "Certificación",
     "work-events": "Eventos de trabajo",
     "working-hours": "Horario de trabajo",
