--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -234,7 +234,13 @@
     "center": "Erdian",
     "certificate": "Ziurtagiria",
     "change": "Aldatu",
+    "change-customer": "Bezeroa aldatu",
     "change-password-online-warning": "Instalazio hau online egongo bada, pasahitza seguruago batez aldatu beharko litzateke.",
+    "change-warehouse": "Biltegira aldatu",
+    "changed-agent-to": "%oldAgent% agentea %newAgent% agentera aldatu da",
+    "changed-customer-to": "%oldCustomer% bezeroa %newCustomer% bezero izatera aldatu da",
+    "changed-status-to": "Egoera aldaketa, %oldStatus% lehen, orain %newStatus%",
+    "changed-user-to": "%oldUser% erabiltzailea %newUser% erabiltzailera aldatu da",
     "channel": "Kanala",
     "charge": "Kobratu",
     "charge-date": "Kobratzeko data",
@@ -338,6 +344,7 @@
     "convert-into-supplier": "Hornitzaile bihurtu",
     "cookies": "Cookie-ak",
     "copy": "Kopiatu",
+    "copy-attachments": "Atxikitutako fitxategiak kopiatu",
     "copy-p": "Bete formularioa eredu honen kopia bat egiteko",
     "copy-subaccounts": "Kontabilitate plana kopiatu",
     "core-update": "%version%. bertsiora muinaren eguneraketa",
@@ -490,6 +497,7 @@
     "different-than": "Honen ezberdina",
     "disable": "Ezgaitu",
     "disable-plugins": "Desgaitu plug-inak",
+    "disable-stock-management": "Ez kontrolatu stocka (lanetan)",
     "disabled": "Ezgaitua",
     "disabled-plugins": "Plug-in-ak desgaituta daude",
     "discharge-date": "Alta data: %date%",
@@ -526,6 +534,7 @@
     "drag": "Arrastatu",
     "dto": "Beherapena",
     "dto-2": "2. deskontua",
+    "duplicate-customer-name-or-cif": "Izena edo CIF\/NIF bera duten bezero bat dago",
     "duplicate-record": "Erregistro bikoiztua",
     "duplicated-reference": "Erreferentzia '%reference%' bikoiztua",
     "duplicated-request": "Bikoiztutako eskaera",
@@ -714,6 +723,7 @@
     "from": "Nondik",
     "from-accounting-entry": "Idazpenagatik",
     "from-date": "Data honetatik",
+    "from-hour": "Hasiera ordua",
     "from-subaccount": "Azpikontutik",
     "full-access": "Erabateko sarbidea",
     "full-path": "Bide-izen osoa",
@@ -725,6 +735,8 @@
     "generate-accounting-entries": "Asientoak sortu",
     "generate-accounting-entry": "Kontabilitate idazpena sortu",
     "generate-doc-type": "Sortzen duen documentu mota",
+    "generate-document": "Dokumentua sor",
+    "generate-document-desc": "Gehiatu lerro bat dokumentuaren hasieran aukeratutako informazioarekin",
     "generate-invoice": "Faktura sortu",
     "generate-receipts": "Ordainagiriak sortu",
     "generate-settlements": "Likidazioak sortu",
@@ -988,6 +1000,7 @@
     "mail-test-ok": "Helbide elektroniko froga arrakastatsua",
     "mailer": "Posta kontroladorea",
     "main-address": "Helbide nagusia",
+    "make-invoice": "Faktura egin",
     "manage": "Administratu",
     "manage-installation": "Kudeatu",
     "manual": "Eskuz",
@@ -1089,6 +1102,7 @@
     "nick": "Goitizena",
     "no": "Ez",
     "no-admin": "Ez da administratzaile",
+    "no-agent": "Agenterik gabe",
     "no-data": "Ez dago daturik",
     "no-data-received-form": "Ez da inprimaki bidez daturik jaso",
     "no-devices-detected-scan-usb": "Ez da gailurik detektatu. Saiatu eskaneatzen.",
@@ -1104,6 +1118,7 @@
     "no-selected-item": "Ez da elementurik aukeratu",
     "no-stock": "Stocka ez kontrolatu",
     "no-updates-now": "Une honetan ez dago eguneratzerik",
+    "no-works-to-invoice": "Ez dago fakturatzeko lanarik",
     "non-editable-accounting-entry": "Idazpena ezin da editatu",
     "non-editable-columns": "Zutabe ez editagarriak: %columns%",
     "non-editable-document": "Dokumentu ez editagarria",
@@ -1128,6 +1143,7 @@
     "notices": "Oharrak",
     "notification": "Jakinarazpena",
     "notifications": "Jakinarazpenak",
+    "notified": "Abisuatuta",
     "november": "Azaroa",
     "number": "Zenbakia",
     "number-attachments": "Eranskin kopurua",
@@ -1159,6 +1175,7 @@
     "operator": "Operadorea",
     "option": "Aukera",
     "optional": "aukerakoa",
+    "optional-or-product": "Aukerakoa. Ezer idazten ez bada, produktuarena erabiliko da.",
     "options": "Aukerak",
     "options-button-header": "Diseinua eta baimenak",
     "order": "Eskaera",
@@ -1290,6 +1307,11 @@
     "print-price": "Prezioak inprimatu",
     "print-quantity": "Kantitatea inprimatu",
     "print-ticket": "Tiketa inprimatu",
+    "print-works": "Lanak inprimatu",
+    "print-works-description": "Lanen deskribapena inprimatu",
+    "print-works-price": "Lanaren prezioa inprimatu",
+    "print-works-quantity": "Lan kopurua inprimatu",
+    "print-works-reference": "Lanaren erreferentzia inprimatu",
     "printed": "Inprimakia",
     "printing-format": "Inprimatze formatua",
     "printing-formats": "Inprimatze formatuak",
@@ -1406,6 +1428,7 @@
     "reset": "Berrezarri",
     "resource": "Baliabidea",
     "respond": "Erantzun",
+    "responsible": "Arduraduna",
     "restore": "Berrezarri",
     "restore-data": "Datuak berreskuratu",
     "result": "Emaitza",
@@ -1434,10 +1457,12 @@
     "scan-usb-devices": "Escanear dispositivos USB",
     "sdk": "SDK",
     "search": "Bilatu",
+    "search-customer": "Bezeroa bilatu",
     "search-document": "Idatzi bilaketa egiteko %doctype% kopurua.",
     "search-in-all-pages": "Busca en todas las páginas del programa",
     "search-message": "Bilatu mezua",
     "search-product": "Produktua bilatu",
+    "searching": "Bilatzen",
     "seats": "Lekuak",
     "second-hand": "Bigarren eskukoa",
     "second-quarter": "2. hiruhilekoa",
@@ -1518,6 +1543,7 @@
     "soap-extension-not-installed": "SOAP luzapena ez dago gaituta PHPn. Jarri harremanetan zure hosting hornitzailerarekin gaitzeko.",
     "social-security-number": "Gizarte segurantza zenbakia",
     "software": "Software",
+    "solution": "Soluzioa",
     "sort": "Ordena",
     "sort-by-balance-asc": "Ordenar por saldo ascendente",
     "sort-by-balance-desc": "Ordenar por saldo descendente",
@@ -1586,6 +1612,7 @@
     "subject": "Gaia",
     "subtotal": "Subtotala",
     "subtract": "Kendu",
+    "subtract-stock": "Stocka kendu",
     "success": "Arrakasta",
     "successive-tract": "hurrenkera",
     "sum": "Batuketa",
@@ -1642,6 +1669,7 @@
     "tax-debit-account": "Zergen zordun kontua",
     "tax-transport": "Garraioaren zergak",
     "taxes": "Zergak",
+    "tel": "Tel.",
     "telemetry-data-to-send": "Erregistratutako instalazioek aldizka FacturaScripts-en bertsio, PHP, herrialdea, hizkuntza eta plugin zerrenden berri ematen dute.",
     "telephone-prefix": "Telefono aurrizkia",
     "template": "Txantiloi",
@@ -1737,6 +1765,7 @@
     "unsafe-file-p": "Segurtasun arrazoiak direla eta, ezin dazu deskargatu tipo hauetako fitxategiren bat: %file%",
     "until-accounting-entry": "Idazpenara arte",
     "until-date": "Data arte",
+    "until-hour": "Amaiera ordua",
     "until-subaccount": "Azpikontura arte",
     "update": "Eguneratu",
     "update-stock": "Stocka eguneratu",
@@ -1778,6 +1807,7 @@
     "vat-document": "Dokumentua",
     "vat-exception": "BEZaren salbuespena",
     "vat-number-is-short": "'%vat-number%' zenbakia motza da",
+    "vat-number-not-valid": "%vat-number% no está registrado en el VIES",
     "vat-number-not-vies": "El número '%vat-number%' ez dago VIES sistemaren erregistroan",
     "vat-regime": "BEZ erregimena",
     "VAT-register": "Zerga liburua",
@@ -1819,6 +1849,7 @@
     "wizard": "Laguntzailea",
     "wizard-p": "Bete zure negozioari buruzko inprimaki hau konfigurazioa amaitzeko.",
     "wizard-plugins": "Plugin bat funtzionalitate berriak gehitzen dituen osagarri bat da. Aukeratu berehala aktibatu nahi dituzun pluginak edo egin ezazu beranduago kontrol paneletik.",
+    "work": "Lana",
     "work-certification": "Ziurtagiria",
     "work-events": "Lan ekitaldiak",
     "working-hours": "Lan orduak",
