--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -234,7 +234,13 @@
     "center": "Centre",
     "certificate": "Certificat",
     "change": "Changer",
+    "change-customer": "Changer de client",
     "change-password-online-warning": "Si cette installation va être en ligne, vous devriez changer le mot de passe pour un plus sécurisé.",
+    "change-warehouse": "Changer d'entrepôt",
+    "changed-agent-to": "L'agent a été changé de %oldAgent% à %newAgent%",
+    "changed-customer-to": "Le client a été changé de %oldCustomer% à %newCustomer%",
+    "changed-status-to": "Statut changé, avant %oldStatus%, maintenant %newStatus%",
+    "changed-user-to": "L'utilisateur a été changé de %oldUser% à %newUser%",
     "channel": "canal",
     "charge": "Cobrar",
     "charge-date": "Date de facturation",
@@ -338,6 +344,7 @@
     "convert-into-supplier": "Convertir en fournisseur",
     "cookies": "Cookies",
     "copy": "Copier",
+    "copy-attachments": "Copier les fichiers joints",
     "copy-p": "Remplissez le formulaire pour effectuer une copie de ce modèle",
     "copy-subaccounts": "Copier le plan comptable",
     "core-update": "Mise à jour du noyau vers la version %version%",
@@ -490,6 +497,7 @@
     "different-than": "Différent de",
     "disable": "Désactiver",
     "disable-plugins": "Désactiver les plugins",
+    "disable-stock-management": "Ne pas gérer le stock (dans les travaux)",
     "disabled": "désactivé",
     "disabled-plugins": "Plugins désactivés",
     "discharge-date": "Date de sortie: %date%",
@@ -526,6 +534,7 @@
     "drag": "Traînée",
     "dto": "Disque.",
     "dto-2": "% de remise 2",
+    "duplicate-customer-name-or-cif": "Il existe un client avec le même nom ou CIF\/NIF",
     "duplicate-record": "Enregistrement en double",
     "duplicated-reference": "Référence '%reference%' dupliquée",
     "duplicated-request": "Requête dupliquée",
@@ -714,6 +723,7 @@
     "from": "De",
     "from-accounting-entry": "Depuis l'entrée",
     "from-date": "partir de la date",
+    "from-hour": "À partir de l'heure",
     "from-subaccount": "À partir du sous-compte",
     "full-access": "Accès complet",
     "full-path": "Chemin complet",
@@ -725,6 +735,8 @@
     "generate-accounting-entries": "Générer des écritures de journal",
     "generate-accounting-entry": "Générer une entrée comptable",
     "generate-doc-type": "Générer un type de document",
+    "generate-document": "Générer un document",
+    "generate-document-desc": "Ajoutez une ligne en haut du document avec les informations sélectionnées",
     "generate-invoice": "Générer une facture",
     "generate-receipts": "Générer des reçus",
     "generate-settlements": "Générer des règlements",
@@ -988,6 +1000,7 @@
     "mail-test-ok": "Test de l'email effectué avec succès",
     "mailer": "Contrôleur de courrier",
     "main-address": "Adresse principale",
+    "make-invoice": "Faire une facture",
     "manage": "Gérer",
     "manage-installation": "Gérer",
     "manual": "Manuel",
@@ -1089,6 +1102,7 @@
     "nick": "Nick",
     "no": "Non",
     "no-admin": "Pas d'administration",
+    "no-agent": "Aucun agent",
     "no-data": "Pas de données",
     "no-data-received-form": "Aucune donnée reçue par formulaire",
     "no-devices-detected-scan-usb": "Aucun appareil détecté. Essayez de numériser.",
@@ -1104,6 +1118,7 @@
     "no-selected-item": "Aucun élément sélectionné",
     "no-stock": "Ne pas contrôler le stock",
     "no-updates-now": "Aucune mise à jour pour le moment",
+    "no-works-to-invoice": "Aucun travail à inclure dans la facture",
     "non-editable-accounting-entry": "Entrée comptable non modifiable",
     "non-editable-columns": "Colonnes non modifiables : %columns%",
     "non-editable-document": "Document non éditable",
@@ -1128,6 +1143,7 @@
     "notices": "Avis",
     "notification": "Notification",
     "notifications": "Notificaciones",
+    "notified": "Notifié",
     "november": "Novembre",
     "number": "Nombre",
     "number-attachments": "No. de pièces jointes",
@@ -1159,6 +1175,7 @@
     "operator": "Opérateur",
     "option": "option",
     "optional": "Optionnel",
+    "optional-or-product": "Opcional. Si no se escribe nada se usará del producto.",
     "options": "Options",
     "options-button-header": "Maquetación y permisos",
     "order": "commande",
@@ -1290,6 +1307,11 @@
     "print-price": "Imprimir precios",
     "print-quantity": "Imprimir cantidad",
     "print-ticket": "Imprimer le ticket",
+    "print-works": "Imprimer les travaux",
+    "print-works-description": "Imprimer la description des travaux",
+    "print-works-price": "Imprimer le prix des travaux",
+    "print-works-quantity": "Imprimer la quantité de travaux",
+    "print-works-reference": "Imprimer la référence des travaux",
     "printed": "Imprimé",
     "printing-format": "Format d'impression",
     "printing-formats": "Formats d'impression",
@@ -1406,6 +1428,7 @@
     "reset": "Réinitialiser les paramètres",
     "resource": "Ressource",
     "respond": "Répondre",
+    "responsible": "Responsable",
     "restore": "Restaurer",
     "restore-data": "Restaurer les données",
     "result": "Résultat",
@@ -1434,10 +1457,12 @@
     "scan-usb-devices": "Analyser les périphériques USB",
     "sdk": "SDK",
     "search": "Chercher",
+    "search-customer": "Rechercher un client",
     "search-document": "Entrez le numéro du\/de la %doctype% à rechercher.",
     "search-in-all-pages": "Rechercher dans toutes les pages du programme",
     "search-message": "Message de recherche",
     "search-product": "Rechercher un produit",
+    "searching": "Recherche",
     "seats": "Places",
     "second-hand": "Seconde main",
     "second-quarter": "2ème trimestre",
@@ -1518,6 +1543,7 @@
     "soap-extension-not-installed": "L'extension SOAP n'est pas activée dans PHP. Contactez votre hébergeur pour l'activer.",
     "social-security-number": "Numéro de sécurité sociale",
     "software": "Logiciel",
+    "solution": "Solution",
     "sort": "Commande",
     "sort-by-balance-asc": "Trier par solde croissant",
     "sort-by-balance-desc": "Trier par solde décroissant",
@@ -1586,6 +1612,7 @@
     "subject": "Sujet",
     "subtotal": "Sous-total",
     "subtract": "Soustraire",
+    "subtract-stock": "Soustraire du stock",
     "success": "Succès",
     "successive-tract": "Livraison en chaîne",
     "sum": "Somme",
@@ -1642,6 +1669,7 @@
     "tax-debit-account": "Compte débiteur pour l'imposition",
     "tax-transport": "Transport fiscal",
     "taxes": "Taxes",
+    "tel": "Tél.",
     "telemetry-data-to-send": "Les installations enregistrées transmettent périodiquement la version de FacturaScripts et de PHP, le pays, la langue et la liste des modules externes.",
     "telephone-prefix": "Préfixe téléphonique",
     "template": "Modèle",
@@ -1737,6 +1765,7 @@
     "unsafe-file-p": "Pour des raisons de sécurité, nous empêchons le téléchargement de certains types de fichiers, comme celui-ci : %file%",
     "until-accounting-entry": "Jusqu'à l'entrée",
     "until-date": "Jusqu'à la date",
+    "until-hour": "Jusqu'à l'heure",
     "until-subaccount": "Jusqu'au sous-compte",
     "update": "Mise à jour",
     "update-stock": "Mise à jour du stock",
@@ -1778,6 +1807,7 @@
     "vat-document": "Document de TVA",
     "vat-exception": "Dérogation à la TVA",
     "vat-number-is-short": "Le numéro \"%vat-number%\" est trop court",
+    "vat-number-not-valid": "%vat-number% no está registrado en el VIES",
     "vat-number-not-vies": "Le numéro \"%vat-number%\" n'est pas enregistré dans le système VIES.",
     "vat-regime": "Régime de TVA",
     "VAT-register": "Livre d'impôt",
@@ -1819,6 +1849,7 @@
     "wizard": "Assistant",
     "wizard-p": "Remplissez ce formulaire au sujet de votre entreprise pour achever la configuration.",
     "wizard-plugins": "Un module ajoute des fonctionnalités. Sélectionnez les modules que vous souhaitez activer immédiatement. Vous pourrez toujours le faire ultérieurement via le Panneau d'administration.",
+    "work": "Travail",
     "work-certification": "Attestation de travail",
     "work-events": "Événements de travail",
     "working-hours": "Heures de travail",
