--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -234,7 +234,13 @@
     "center": "Centro",
     "certificate": "Certificado",
     "change": "Cambiar",
+    "change-customer": "Cambiar cliente",
     "change-password-online-warning": "Se esta instalación vai estar online, debería mudar o contrasinal por un máis seguro.",
+    "change-warehouse": "Cambiar almacén",
+    "changed-agent-to": "Cambiouse o axente %oldAgent% polo axente %newAgent%",
+    "changed-customer-to": "Cambouse o cliente %oldCustomer% polo cliente %newCustomer%",
+    "changed-status-to": "Cambio de estado, antes %oldStatus%, agora %newStatus%",
+    "changed-user-to": "Cambiouse o usuario %oldUser% polo usuario %newUser%",
     "channel": "Canal",
     "charge": "Cobrar",
     "charge-date": "Data cargo",
@@ -338,6 +344,7 @@
     "convert-into-supplier": "Convertir en provedor",
     "cookies": "Cookies",
     "copy": "Copiar",
+    "copy-attachments": "Copiar arquivos adxuntos",
     "copy-p": "Preencha o formulario para facer unha copia deste modelo",
     "copy-subaccounts": "Copiar plan contable",
     "core-update": "Actualización do núcleo á versión %version%",
@@ -490,6 +497,7 @@
     "different-than": "Diferente que",
     "disable": "Desactivar",
     "disable-plugins": "Desactivar plugins",
+    "disable-stock-management": "Non controlar stock (en traballos)",
     "disabled": "Desactivado",
     "disabled-plugins": "Plugins desactivados",
     "discharge-date": "Data de alta: %date%",
@@ -526,6 +534,7 @@
     "drag": "Arrastrar",
     "dto": "Dto.",
     "dto-2": "Desconto 2",
+    "duplicate-customer-name-or-cif": "Existe un cliente co mesmo nome ou CIF\/NIF",
     "duplicate-record": "Rexistro duplicado",
     "duplicated-reference": "Referencia '%reference%' duplicada",
     "duplicated-request": "Petición duplicada",
@@ -714,6 +723,7 @@
     "from": "Dende",
     "from-accounting-entry": "Dende asento",
     "from-date": "desde",
+    "from-hour": "Hora inicio",
     "from-subaccount": "Dende subconta",
     "full-access": "Acceso completo",
     "full-path": "Ruta completa",
@@ -725,6 +735,8 @@
     "generate-accounting-entries": "Xerar asentos",
     "generate-accounting-entry": "Xerar asento contable",
     "generate-doc-type": "Xerar tipo de documento",
+    "generate-document": "Xerar documento",
+    "generate-document-desc": "Engade unha liña ao principio do documento coa información seleccionada",
     "generate-invoice": "Acción para crear facturas",
     "generate-receipts": "Xerar recibos",
     "generate-settlements": "Xerar liquidacións",
@@ -988,6 +1000,7 @@
     "mail-test-ok": "Proba de correo electrónico satisfactoria",
     "mailer": "Controlador de correo",
     "main-address": "Enderezo principal",
+    "make-invoice": "Facer factura",
     "manage": "Administrar",
     "manage-installation": "Administrar",
     "manual": "Manual",
@@ -1089,6 +1102,7 @@
     "nick": "Apodo",
     "no": "Non",
     "no-admin": "Non administrador",
+    "no-agent": "Sen axente",
     "no-data": "Non hai datos",
     "no-data-received-form": "Ningún dato recibido por formulario",
     "no-devices-detected-scan-usb": "Non se detectaron dispositivos. Proba a escanear.",
@@ -1104,6 +1118,7 @@
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "Non controlar stock",
     "no-updates-now": "Non hai actualizacións neste momento",
+    "no-works-to-invoice": "Non hai traballos para facturar",
     "non-editable-accounting-entry": "Asento non editable",
     "non-editable-columns": "Non se permite editar as columnas",
     "non-editable-document": "Documento non editable",
@@ -1128,6 +1143,7 @@
     "notices": "Avisos",
     "notification": "Notificación",
     "notifications": "Notificaciones",
+    "notified": "Notificado",
     "november": "Novembro",
     "number": "Número",
     "number-attachments": "Nº de adxuntos",
@@ -1159,6 +1175,7 @@
     "operator": "Operador",
     "option": "Opción",
     "optional": "opcional",
+    "optional-or-product": "Opcional. Se non se escribe nada, empregarase o produto.",
     "options": "Opciones",
     "options-button-header": "Maquetación e permisos",
     "order": "Pedido",
@@ -1290,6 +1307,11 @@
     "print-price": "Imprimir prezos",
     "print-quantity": "Imprimir cantidade",
     "print-ticket": "Imprimir ticket",
+    "print-works": "Imprimir traballos",
+    "print-works-description": "Imprimir descrición dos traballos",
+    "print-works-price": "Imprimir prezo dos traballos",
+    "print-works-quantity": "Imprimir cantidade de traballos",
+    "print-works-reference": "Imprimir referencia dos traballos",
     "printed": "Impreso",
     "printing-format": "Formato de impresión",
     "printing-formats": "Formatos de impresión",
@@ -1406,6 +1428,7 @@
     "reset": "Configuración reiniciada correctamente.",
     "resource": "Recurso",
     "respond": "Responder",
+    "responsible": "Responsable",
     "restore": "Restaurar",
     "restore-data": "Restaurar datos",
     "result": "Resultado",
@@ -1434,10 +1457,12 @@
     "scan-usb-devices": "Escanear dispositivos USB",
     "sdk": "SDK",
     "search": "Busca",
+    "search-customer": "Buscar cliente",
     "search-document": "Escribe el número de %doctype% para buscar.",
     "search-in-all-pages": "Buscar en todas as páxinas do programa",
     "search-message": "Procurar mensaxe",
     "search-product": "Buscar produto",
+    "searching": "Procurando",
     "seats": "Prazas",
     "second-hand": "Segunda man",
     "second-quarter": "2º trimestre",
@@ -1518,6 +1543,7 @@
     "soap-extension-not-installed": "A extensión SOAP non está activada en PHP. Contacta co teu provedor de hosting para activala.",
     "social-security-number": "Número Seguridade Social",
     "software": "Software",
+    "solution": "solución",
     "sort": "Orde",
     "sort-by-balance-asc": "Ordenar por saldo ascendente",
     "sort-by-balance-desc": "Ordenar por saldo descendente",
@@ -1577,7 +1603,7 @@
     "subaccount-belongs-other-year": "A subconta %subAccountCode% pertence a outro ano fiscal.",
     "subaccount-irpf": "Subconta de retencións para ventas",
     "subaccount-irpf-creditor": "Subconta de retencións para compras",
-    "subaccount-not-found": "Subconta %subAccountCode% non atopada.",
+    "subaccount-not-found": "A subconta %subAccountCode% non está bloqueada.",
     "subaccount-purchases": "Contas para compras",
     "subaccount-pyg-not-found": "Subconta de pérdidas e ganancias non atopada",
     "subaccount-sales": "Cuenta para vendas",
@@ -1586,6 +1612,7 @@
     "subject": "Asunto",
     "subtotal": "Subtotal",
     "subtract": "Restar",
+    "subtract-stock": "Restar stock",
     "success": "Éxito",
     "successive-tract": "Entrega en cadea",
     "sum": "Suma",
@@ -1642,6 +1669,7 @@
     "tax-debit-account": "Conta de débito para impostos",
     "tax-transport": "Transporte tributario",
     "taxes": "Impostos",
+    "tel": "Tel.",
     "telemetry-data-to-send": "As instalacións rexistradas notifican periodicamente a versión de FacturaScripts, PHP, país, idioma e listaxe de  plugins.",
     "telephone-prefix": "Prefixo telefónico",
     "template": "Modelo",
@@ -1737,6 +1765,7 @@
     "unsafe-file-p": "Por motivos de seguridade impedimos as descargas dalgunhas clases de arquivos, como este: %file%",
     "until-accounting-entry": "Ata asento",
     "until-date": "Ata (data)",
+    "until-hour": "Hora fin",
     "until-subaccount": "Ata subconta",
     "update": "Actualizar",
     "update-stock": "Actualizar stock",
@@ -1778,6 +1807,7 @@
     "vat-document": "Documento",
     "vat-exception": "Excepción do IVE",
     "vat-number-is-short": "O número '%vat-number%' é demasiado corto",
+    "vat-number-not-valid": "%vat-number% no está registrado en el VIES",
     "vat-number-not-vies": "O número '%vat-number%' non está rexistrado no sistema VIES",
     "vat-regime": "Réxime do IVE",
     "VAT-register": "Libro de impostos",
@@ -1819,6 +1849,7 @@
     "wizard": "asistente",
     "wizard-p": "Cubra este formulario sobre o seu negocio para rematar a configuración.",
     "wizard-plugins": "Un plugin é un complemento que engade novas funcionalidades. Selecciona os plugins que queras activar de inmediato, ou faino máis tarde dende o panel de control.",
+    "work": "Traballo",
     "work-certification": "Certificación",
     "work-events": "Eventos de traballo",
     "working-hours": "Horario de traballo",
