--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -234,7 +234,13 @@
     "center": "Centro",
     "certificate": "Certificato",
     "change": "cambiamento",
+    "change-customer": "Cambia cliente",
     "change-password-online-warning": "Se questa installazione sarà online, dovrebbe cambiare la password con una più sicura.",
+    "change-warehouse": "Cambiare magazzino",
+    "changed-agent-to": "L'agente è stato cambiato da %oldAgent% a %newAgent%",
+    "changed-customer-to": "Il cliente è stato cambiato da %oldCustomer% a %newCustomer%",
+    "changed-status-to": "Cambio stato, prima %oldStatus%, ora %newStatus%",
+    "changed-user-to": "L'utente è stato cambiato da %oldUser% a %newUser%",
     "channel": "canale",
     "charge": "Caricare",
     "charge-date": "Data del addebito",
@@ -338,6 +344,7 @@
     "convert-into-supplier": "Converti in fornitore",
     "cookies": "Cookie",
     "copy": "copia",
+    "copy-attachments": "Copiare gli allegati",
     "copy-p": "copia p",
     "copy-subaccounts": "copia sottocconti",
     "core-update": "Aggiornamento alla versione %version%",
@@ -490,6 +497,7 @@
     "different-than": "Diverso da",
     "disable": "disattivare",
     "disable-plugins": "Disabilita plugin",
+    "disable-stock-management": "Non gestire stock (nei lavori)",
     "disabled": "Disabilitato",
     "disabled-plugins": "Plugin disabilitati",
     "discharge-date": "Data di scarico: 0",
@@ -526,6 +534,7 @@
     "drag": "Trascinare",
     "dto": "Disco.",
     "dto-2": "Dto. 2",
+    "duplicate-customer-name-or-cif": "Esiste un cliente con lo stesso nome o CIF\/NIF",
     "duplicate-record": "record duplicato",
     "duplicated-reference": "Riferimento '%reference%' duplicato",
     "duplicated-request": "richiesta duplicata",
@@ -714,6 +723,7 @@
     "from": "Da",
     "from-accounting-entry": "dall'ingresso in contabilità",
     "from-date": "a partire da",
+    "from-hour": "dalle-ore",
     "from-subaccount": "Da sotto-conto",
     "full-access": "accesso completo",
     "full-path": "Percorso completo",
@@ -725,6 +735,8 @@
     "generate-accounting-entries": "generare voci contabili",
     "generate-accounting-entry": "Genera voce contabile",
     "generate-doc-type": "Genera tipo di documento",
+    "generate-document": "Genera documento",
+    "generate-document-desc": "Aggiungi una riga all'inizio del documento con le informazioni selezionate",
     "generate-invoice": "Crea Fattura",
     "generate-receipts": "genera-ricevute",
     "generate-settlements": "generare liquidazioni",
@@ -988,6 +1000,7 @@
     "mail-test-ok": "Test dell'e-mail completata con successo",
     "mailer": "Controllore mail",
     "main-address": "Indirizzo principale",
+    "make-invoice": "Fattura",
     "manage": "gestire",
     "manage-installation": "Gestire",
     "manual": "manuale",
@@ -1089,6 +1102,7 @@
     "nick": "tacca",
     "no": "non",
     "no-admin": "Nessun amministratore",
+    "no-agent": "Senza agente",
     "no-data": "Nessun dato",
     "no-data-received-form": "Nessun dato ricevuto dal modulo",
     "no-devices-detected-scan-usb": "Nessun dispositivo rilevato. Prova a eseguire la scansione.",
@@ -1104,6 +1118,7 @@
     "no-selected-item": "Nessun elemento selezionato",
     "no-stock": "Nessun stock",
     "no-updates-now": "Non ci sono aggiornamenti in questo momento",
+    "no-works-to-invoice": "Nessun lavoro da fatturare",
     "non-editable-accounting-entry": "Assegnazione non modificabile",
     "non-editable-columns": "Colonna non modificabile: %columns%",
     "non-editable-document": "Documento non modificabile",
@@ -1128,6 +1143,7 @@
     "notices": "Avvisi",
     "notification": "Notifica",
     "notifications": "Notifiche",
+    "notified": "Notificato",
     "november": "Novembre",
     "number": "Numero",
     "number-attachments": "Nº di allegati",
@@ -1159,6 +1175,7 @@
     "operator": "Operatore",
     "option": "opzione",
     "optional": "facoltativo",
+    "optional-or-product": "Facoltativo. Se non viene scritto nulla, verranno utilizzate le informazioni del prodotto.",
     "options": "opzioni",
     "options-button-header": "Maquetación y permessi",
     "order": "ordine",
@@ -1290,6 +1307,11 @@
     "print-price": "Stampa prezzi",
     "print-quantity": "Stampare quantità",
     "print-ticket": "Stampa biglietto",
+    "print-works": "stampa-opere",
+    "print-works-description": "Stampa della descrizione dei lavori",
+    "print-works-price": "Stampa del prezzo dei lavori",
+    "print-works-quantity": "Stampa quantita di lavori",
+    "print-works-reference": "Stampa riferimento dei lavori",
     "printed": "Stampato",
     "printing-format": "Formato di stampa",
     "printing-formats": "Formati di stampa",
@@ -1406,6 +1428,7 @@
     "reset": "Ripristina",
     "resource": "Risorsa",
     "respond": "Rispondere",
+    "responsible": "Responsabile",
     "restore": "ripristina",
     "restore-data": "Ripristinare i dati",
     "result": "Risultato",
@@ -1434,10 +1457,12 @@
     "scan-usb-devices": "Scansione dispositivi USB",
     "sdk": "SDK",
     "search": "Ricerca",
+    "search-customer": "Cerca cliente",
     "search-document": "Inserisci il numero di %doctype% per cercare.",
     "search-in-all-pages": "Cerca in tutte le pagine del programma",
     "search-message": "Cerca messaggio",
     "search-product": "Cerca prodotto",
+    "searching": "Ricerca",
     "seats": "Posti",
     "second-hand": "Di seconda mano",
     "second-quarter": "Secondo trimestre",
@@ -1518,6 +1543,7 @@
     "soap-extension-not-installed": "La extensión SOAP non è attiva in PHP. Contatta il tuo fornitore di hosting per attivarla.",
     "social-security-number": "Numero di previdenza sociale",
     "software": "Software",
+    "solution": "Soluzione",
     "sort": "Ordinare",
     "sort-by-balance-asc": "Ordina per saldo crescente",
     "sort-by-balance-desc": "Ordina per saldo decrescente",
@@ -1586,6 +1612,7 @@
     "subject": "Oggetto",
     "subtotal": "Subtotale",
     "subtract": "Sottrarre",
+    "subtract-stock": "Sottrarre stock",
     "success": "successo",
     "successive-tract": "tratto successivo",
     "sum": "Somma",
@@ -1642,6 +1669,7 @@
     "tax-debit-account": "Conto addebito per tasse",
     "tax-transport": "Trasporto fiscale",
     "taxes": "Le tasse",
+    "tel": "Tel.",
     "telemetry-data-to-send": "dati di telemetria da inviare",
     "telephone-prefix": "Prefisso telefonico",
     "template": "Modello",
@@ -1737,6 +1765,7 @@
     "unsafe-file-p": "Per motivi di sicurezza impediamo il download di alcuni tipi di file, come questo: %file%",
     "until-accounting-entry": "Fino alla registrazione contabile",
     "until-date": "Fino a",
+    "until-hour": "Fino all'ora",
     "until-subaccount": "Fino a subconto",
     "update": "aggiornare",
     "update-stock": "Aggiorna stock",
@@ -1778,6 +1807,7 @@
     "vat-document": "Documento IVA",
     "vat-exception": "Eccezione IVA",
     "vat-number-is-short": "Il numero '%vat-number%' è troppo corto",
+    "vat-number-not-valid": "%vat-number% no está registrado en el VIES",
     "vat-number-not-vies": "Il numero '%vat-number%' non è registrato nel sistema VIES",
     "vat-regime": "Regime IVA",
     "VAT-register": "Partita IVA",
@@ -1819,6 +1849,7 @@
     "wizard": "Assistente",
     "wizard-p": "Compila questo modulo sul tuo business per completare la configurazione.",
     "wizard-plugins": "Un plugin è un componente che aggiunge nuove funzionalità. Seleziona i plugin che desideri attivare immediatamente, o fallo più tardi dal pannello di controllo.",
+    "work": "Lavoro",
     "work-certification": "Certificazione",
     "work-events": "Eventi di lavoro",
     "working-hours": "Ore lavorative",
