--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -234,7 +234,13 @@
     "center": "Centrum",
     "certificate": "Certyfikat",
     "change": "Zmień",
+    "change-customer": "Zmień klienta",
     "change-password-online-warning": "Jeśli ta instalacja ma być online, należy zmienić hasło na bezpieczniejsze.",
+    "change-warehouse": "Zmień magazyn",
+    "changed-agent-to": "Zmieniono agenta %oldAgent% na agenta %newAgent%",
+    "changed-customer-to": "Zmieniono klienta %oldCustomer% na klienta %newCustomer%",
+    "changed-status-to": "Zmiana statusu, wcześniej %oldStatus%, teraz %newStatus%",
+    "changed-user-to": "Użytkownik %oldUser% został zmieniony na użytkownika %newUser%",
     "channel": "Kanał",
     "charge": "Pobierać",
     "charge-date": "Data obciążenia",
@@ -338,6 +344,7 @@
     "convert-into-supplier": "Konwertuj do dostawcy",
     "cookies": "Ciasteczka",
     "copy": "Kopiuj",
+    "copy-attachments": "Skopiuj załączniki",
     "copy-p": "Wypełnij formularz, aby zrobić kopię tego modelu",
     "copy-subaccounts": "Kopiuj plan kont",
     "core-update": "Aktualizacja rdzenia do wersji %version%",
@@ -490,6 +497,7 @@
     "different-than": "Różny niż",
     "disable": "Deaktywować",
     "disable-plugins": "Wyłącz wtyczki",
+    "disable-stock-management": "Nie kontrolować zapasów (w pracy)",
     "disabled": "Wyłączone",
     "disabled-plugins": "Wyłączone wtyczki",
     "discharge-date": "Data rozładowania: %date%",
@@ -526,6 +534,7 @@
     "drag": "Przeciągnij",
     "dto": "Dto.",
     "dto-2": "Dto. 2",
+    "duplicate-customer-name-or-cif": "Istnieje klient o tej samej nazwie lub CIF\\\/NIF",
     "duplicate-record": "Duplikat rekordu",
     "duplicated-reference": "Zduplikowana referencja: '%reference%'",
     "duplicated-request": "Duplikat żądania",
@@ -714,6 +723,7 @@
     "from": "Od",
     "from-accounting-entry": "Od pozycji",
     "from-date": "Od",
+    "from-hour": "Godzina rozpoczęcia",
     "from-subaccount": "Z subkonta",
     "full-access": "Pełny dostęp",
     "full-path": "Pełna ścieżka",
@@ -725,6 +735,8 @@
     "generate-accounting-entries": "Generuj wpisy księgowe",
     "generate-accounting-entry": "Generuj wpis księgowy",
     "generate-doc-type": "Generować typ dokumentu",
+    "generate-document": "Generuj dokument",
+    "generate-document-desc": "Dodaj linię na początku dokumentu z wybraną informacją",
     "generate-invoice": "Utwórz fakturę",
     "generate-receipts": "Generuj paragon",
     "generate-settlements": "Generuj rozliczenia",
@@ -988,6 +1000,7 @@
     "mail-test-ok": "Test e-mail został pomyślnie wykonany",
     "mailer": "Sterownik poczty",
     "main-address": "Główne adres",
+    "make-invoice": "Wystaw fakturę",
     "manage": "Zarządzaj",
     "manage-installation": "Zarządzaj",
     "manual": "Instrukcja obsługi",
@@ -1089,6 +1102,7 @@
     "nick": "Nick",
     "no": "Nie",
     "no-admin": "Brak administratora",
+    "no-agent": "Bez agenta",
     "no-data": "Brak danych",
     "no-data-received-form": "Nie otrzymano danych z formularza",
     "no-devices-detected-scan-usb": "Nie wykryto urządzeń. Spróbuj zeskanować.",
@@ -1104,6 +1118,7 @@
     "no-selected-item": "Nie wybrano żadnego elementu",
     "no-stock": "Brak kontrolowania zapasów",
     "no-updates-now": "Brak aktualizacji w tej chwili",
+    "no-works-to-invoice": "Brak prac do faktury",
     "non-editable-accounting-entry": "Nieedytowalny wpis księgowy",
     "non-editable-columns": "Kolumny nieedytowalne: %columns%",
     "non-editable-document": "Dokument nieedytowalny",
@@ -1128,6 +1143,7 @@
     "notices": "Powiadomienia",
     "notification": "Powiadomienie",
     "notifications": "Powiadomienia",
+    "notified": "Notificado",
     "november": "Noviembre",
     "number": "Numer",
     "number-attachments": "Liczba załączników",
@@ -1159,6 +1175,7 @@
     "operator": "Operator",
     "option": "Opcja",
     "optional": "opcjonalny",
+    "optional-or-product": "Opcjonalne. Jeśli nic nie zostanie napisane, użyta zostanie informacja o produkcie.",
     "options": "Opcje",
     "options-button-header": "Układ i uprawnienia",
     "order": "Zamówienie",
@@ -1290,6 +1307,11 @@
     "print-price": "Drukuj ceny",
     "print-quantity": "Drukuj ilość",
     "print-ticket": "Drukuj bilet",
+    "print-works": "Drukuj prace",
+    "print-works-description": "Drukuj opis prac",
+    "print-works-price": "Drukuj cenę robót",
+    "print-works-quantity": "Drukuj ilość prac",
+    "print-works-reference": "Drukuj odniesienie do prac",
     "printed": "Wydrukowane",
     "printing-format": "Format druku",
     "printing-formats": "Formaty druku",
@@ -1406,6 +1428,7 @@
     "reset": "Resetuj",
     "resource": "Zasób",
     "respond": "Responder",
+    "responsible": "Responsable",
     "restore": "Przywróć",
     "restore-data": "Przywróć dane",
     "result": "Wynik",
@@ -1434,10 +1457,12 @@
     "scan-usb-devices": "Skanuj urządzenia USB",
     "sdk": "SDK",
     "search": "Szukaj",
+    "search-customer": "Szukaj klienta",
     "search-document": "Wpisz numer %doctype%, aby wyszukać.",
     "search-in-all-pages": "Wyszukaj we wszystkich stronach programu",
     "search-message": "Szukaj wiadomości",
     "search-product": "Szukaj produktu",
+    "searching": "Szukanie",
     "seats": "Miejsca",
     "second-hand": "Używane",
     "second-quarter": "2 kwartał",
@@ -1518,6 +1543,7 @@
     "soap-extension-not-installed": "Rozszerzenie SOAP nie jest zainstalowane w PHP. Skontaktuj się z dostawcą hostingu, aby je aktywować.",
     "social-security-number": "Numer ubezpieczenia społecznego",
     "software": "Oprogramowanie",
+    "solution": "Rozwiązanie",
     "sort": "Sortowanie",
     "sort-by-balance-asc": "Sortuj według salda rosnąco",
     "sort-by-balance-desc": "Ordenar por saldo descendente",
@@ -1586,6 +1612,7 @@
     "subject": "Temat",
     "subtotal": "Suma częściowa",
     "subtract": "Odjąć",
+    "subtract-stock": "Odejmij zapas",
     "success": "Sukces",
     "successive-tract": "Dostawa łańcuchowa",
     "sum": "Suma",
@@ -1642,6 +1669,7 @@
     "tax-debit-account": "Konto debetowe do podatków",
     "tax-transport": "Podatki od transportu",
     "taxes": "Podatki",
+    "tel": "Tel.",
     "telemetry-data-to-send": "Zarejestrowane instalacje okresowo informują o wersji FacturaScripts, PHP, kraju, języku i liście wtyczek.",
     "telephone-prefix": "Prefiks telefoniczny",
     "template": "Szablon",
@@ -1737,6 +1765,7 @@
     "unsafe-file-p": "Z powodów bezpieczeństwa uniemożliwiamy pobieranie niektórych typów plików, takich jak ten: %file%",
     "until-accounting-entry": "Do wpisu księgowego",
     "until-date": "Do",
+    "until-hour": "Godzina końcowa",
     "until-subaccount": "Do subkonta",
     "update": "Aktualizować",
     "update-stock": "Aktualizuj zapasy",
@@ -1778,6 +1807,7 @@
     "vat-document": "Dokument",
     "vat-exception": "Wyjątek VAT",
     "vat-number-is-short": "Numer '%vat-number%' jest zbyt krótki",
+    "vat-number-not-valid": "%vat-number% no está registrado en el VIES",
     "vat-number-not-vies": "Numer '%vat-number%' nie jest zarejestrowany w systemie VIES",
     "vat-regime": "Reżim podatkowy",
     "VAT-register": "Podatki",
@@ -1819,6 +1849,7 @@
     "wizard": "Asystent",
     "wizard-p": "Wypełnij ten formularz dotyczący swojej firmy, aby zakończyć konfigurację.",
     "wizard-plugins": "Wtyczka to dodatek, który dodaje nowe funkcjonalności. Wybierz wtyczki, które chcesz aktywować od razu, lub zrób to później z panelu sterowania.",
+    "work": "Praca",
     "work-certification": "Certyfikacja",
     "work-events": "Wydarzenia pracy",
     "working-hours": "Horario de trabajo",
