--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -234,7 +234,13 @@
     "center": "Centro",
     "certificate": "Certificado",
     "change": "mudança",
+    "change-customer": "Mudar cliente",
     "change-password-online-warning": "Se esta instalação vai estar online, deve alterar a palavra-passe para uma mais segura.",
+    "change-warehouse": "Trocar armazém",
+    "changed-agent-to": "O agente %oldAgent% foi alterado para o agente %newAgent%",
+    "changed-customer-to": "O cliente %oldCustomer% foi alterado para o cliente %newCustomer%",
+    "changed-status-to": "Alteração de estado, anterior %oldStatus%, agora %newStatus%",
+    "changed-user-to": "O utilizador foi alterado de %oldUser% para %newUser%",
     "channel": "Canal",
     "charge": "Cobrar",
     "charge-date": "Data de cobrança",
@@ -338,6 +344,7 @@
     "convert-into-supplier": "Converter em fornecedor",
     "cookies": "Cookies",
     "copy": "Copiar",
+    "copy-attachments": "Copiar anexos",
     "copy-p": "Preencha o formulário antes de fazer a cópia deste modelo",
     "copy-subaccounts": "Copiar plano de contas",
     "core-update": "Atualização do núcleo para a versão %version%",
@@ -366,7 +373,7 @@
     "cron-job": "Tarefa programada",
     "cron-timeout": "O cron parou para não ultrapassar o tempo máximo de execução do PHP. Por favor, execute o cron a partir do terminal para evitar este limite.",
     "crons": "Cronós",
-    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
+    "csv-file-must-have-at-least-2-columns": "O ficheiro CSV deve ter pelo menos 2 colunas.",
     "currency": "Moeda",
     "currency-position": "Posição do símbolo da moeda",
     "current-quarter": "Trimestre atual",
@@ -406,7 +413,7 @@
     "database": "Base de dados",
     "database-error": "Erro ao conectar à base de dados",
     "database-error-pc": "🖥️ Se o programa estiver instalado no seu PC, pode ter-se esquecido de ativar o MySQL ou ter problemas para ativá-lo.",
-    "database-error-server": "🌎 se o programa está instalado em um servidor ou hosting, provavelmente você mudou o usuário ou senha do banco de dados, ou atingiu algum limite de uso do hosting.",
+    "database-error-server": "Se o programa estiver instalado num servidor ou serviço de alojamento, provavelmente alterou o nome de utilizador ou a palavra-passe da base de dados, ou atingiu algum limite de utilização do alojamento.",
     "database-name-must-be-lowercase": "O nome da base de dados deve estar em minúsculas",
     "date": "Data",
     "date-in": "Data em",
@@ -484,12 +491,13 @@
     "destination-warehouse": "Armazém de destino",
     "detail": "Detalhe",
     "details": "Detalhes",
-    "detected-usb-devices": "Dispositivos USB detectados",
+    "detected-usb-devices": "Dispositivos USB detetados",
     "difference": "Diferença",
     "different-passwords": "As senhas não correspondem a 0",
     "different-than": "Diferente de",
     "disable": "Desativar",
     "disable-plugins": "Desativar plugins",
+    "disable-stock-management": "Não controlar stock (em trabalhos)",
     "disabled": "Desativado",
     "disabled-plugins": "Plugins desativados",
     "discharge-date": "Data de descarga: 0",
@@ -526,6 +534,7 @@
     "drag": "Arrastar",
     "dto": "DESC.",
     "dto-2": "Dto. 2",
+    "duplicate-customer-name-or-cif": "Já existe um cliente com o mesmo nome ou CIF\/NIF",
     "duplicate-record": "Registro duplicado",
     "duplicated-reference": "Referência '%reference%' duplicada",
     "duplicated-request": "Pedido duplicado",
@@ -714,6 +723,7 @@
     "from": "De",
     "from-accounting-entry": "De lançamento",
     "from-date": "da data",
+    "from-hour": "Hora de início",
     "from-subaccount": "De subconta",
     "full-access": "Acesso completo",
     "full-path": "Caminho completo",
@@ -725,6 +735,8 @@
     "generate-accounting-entries": "Gerar lançamentos",
     "generate-accounting-entry": "Gerar lançamento contábil",
     "generate-doc-type": "Gerar tipo de documento",
+    "generate-document": "Gerar documento",
+    "generate-document-desc": "Adiciona uma linha no início do documento com a informação selecionada",
     "generate-invoice": "Criar fatura",
     "generate-receipts": "Gerar recibos",
     "generate-settlements": "Gerar liquidações",
@@ -988,6 +1000,7 @@
     "mail-test-ok": "Prova de email satisfatória",
     "mailer": "Controlador de email",
     "main-address": "Endereço principal",
+    "make-invoice": "fazer-fatura",
     "manage": "Gerir",
     "manage-installation": "Gerir",
     "manual": "Manual",
@@ -1089,6 +1102,7 @@
     "nick": "usuario",
     "no": "Não",
     "no-admin": "Não administrador",
+    "no-agent": "Sem agente",
     "no-data": "Sem dados",
     "no-data-received-form": "Nenhum dado recebido do formulário",
     "no-devices-detected-scan-usb": "Não foram detectados dispositivos. Tente escanear.",
@@ -1104,6 +1118,7 @@
     "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem stock",
     "no-updates-now": "Não há atualizações neste momento",
+    "no-works-to-invoice": "Sem trabalhos para faturar",
     "non-editable-accounting-entry": "Asiento contábil não editável",
     "non-editable-columns": "Colunas não editáveis: %columns%",
     "non-editable-document": "Documento não editável",
@@ -1128,6 +1143,7 @@
     "notices": "Avisos",
     "notification": "Notificação",
     "notifications": "Notificações",
+    "notified": "Notificado",
     "november": "Novembro",
     "number": "Número",
     "number-attachments": "Nº de anexos",
@@ -1153,12 +1169,13 @@
     "opened": "Aberto",
     "opening-acounting-completed": "Abertura de exercício concluída",
     "opening-operation": "Abertura",
-    "operating-system": "Sistema Operativo",
+    "operating-system": "Sistema operativo",
     "operation": "Operação",
     "operation-export": "Operação de exportação",
     "operator": "Operador",
     "option": "Opção",
     "optional": "Opcional",
+    "optional-or-product": "Opcional. Se nada for escrito, será usada a informação do produto.",
     "options": "Opções",
     "options-button-header": "Maquetação e permissões",
     "order": "Ordem",
@@ -1290,6 +1307,11 @@
     "print-price": "Imprimir preço",
     "print-quantity": "Imprimir quantidade",
     "print-ticket": "Imprimir bilhete",
+    "print-works": "Imprimir Trabalhos",
+    "print-works-description": "Imprimir descrição dos trabalhos",
+    "print-works-price": "Imprimir preço dos trabalhos",
+    "print-works-quantity": "Imprimir quantidade de trabalhos",
+    "print-works-reference": "Imprimir referência de trabalhos",
     "printed": "Imprimido",
     "printing-format": "Formato de impressão",
     "printing-formats": "Formatos de impressão",
@@ -1406,6 +1428,7 @@
     "reset": "O programa de configuração foi reiniciado com êxito, pressione <a href='0#advanced'> aqui <\/a> para continuar.",
     "resource": "Recurso",
     "respond": "Responder",
+    "responsible": "Responsável",
     "restore": "Restaurar",
     "restore-data": "Restaurar dados",
     "result": "Resultado",
@@ -1419,7 +1442,7 @@
     "roles": "Roles",
     "rules": "Regras",
     "run": "executar",
-    "running": "Executando",
+    "running": "A executar",
     "running-plugin-cron": "Executando o cron do plugin %pluginName%",
     "running-work-queue": "Executando a fila de eventos de trabalho",
     "sales": "Vendas",
@@ -1434,10 +1457,12 @@
     "scan-usb-devices": "Escanear dispositivos USB",
     "sdk": "SDK",
     "search": "Pesquisa",
+    "search-customer": "Procurar cliente",
     "search-document": "Digite o número de %doctype% para pesquisar.",
     "search-in-all-pages": "Pesquisar em todas as páginas do programa",
     "search-message": "Pesquisar mensagem",
     "search-product": "Procurar produto",
+    "searching": "B",
     "seats": "Lugares",
     "second-hand": "Em segunda mão",
     "second-quarter": "2.º trimestre",
@@ -1518,6 +1543,7 @@
     "soap-extension-not-installed": "A extensão SOAP não está instalada em PHP. Entre em contato com seu provedor de hospedagem para ativá-la.",
     "social-security-number": "Número de Segurança Social",
     "software": "Software",
+    "solution": "Solução",
     "sort": "Ordenar",
     "sort-by-balance-asc": "Ordenar por saldo ascendente",
     "sort-by-balance-desc": "Ordenar por saldo descendente",
@@ -1586,6 +1612,7 @@
     "subject": "Assunto",
     "subtotal": "Subtotal",
     "subtract": "Tirar do estoque",
+    "subtract-stock": "Tirar do estoque",
     "success": "Sucesso",
     "successive-tract": "Entrega em cadeia",
     "sum": "Soma",
@@ -1642,6 +1669,7 @@
     "tax-debit-account": "Conta de débito para impostos",
     "tax-transport": "Transporte fiscal",
     "taxes": "Impostos",
+    "tel": "Tel.",
     "telemetry-data-to-send": "dados de telemetria para enviar",
     "telephone-prefix": "Prefixo telefónico",
     "template": "Modelo",
@@ -1737,6 +1765,7 @@
     "unsafe-file-p": "Por motivos de segurança impedimos as transferências de alguns tipos de ficheiros, como este: %file%",
     "until-accounting-entry": "Até lançamento contábil",
     "until-date": "Até",
+    "until-hour": "Hora de fim",
     "until-subaccount": "Até subconta",
     "update": "Atualizar",
     "update-stock": "Atualizar stock",
@@ -1757,7 +1786,7 @@
     "use-holes-invoices-esp": "Se desmarcar o uso de espaços em faturas e eliminar algum, o espaço ficará na faturação e você terá problemas com a receita",
     "user": "Do utilizador",
     "user-and-config": "Utilizador e configuração",
-    "user-guide": "Guía de usuario",
+    "user-guide": "Guia do utilizador",
     "users": "Comercial",
     "using-apc": "Usando cache APC",
     "using-filecache": "Usando Filecache",
@@ -1778,6 +1807,7 @@
     "vat-document": "Documento",
     "vat-exception": "Exceção de IVA",
     "vat-number-is-short": "O número '%vat-number%' é muito curto",
+    "vat-number-not-valid": "%vat-number% no está registrado en el VIES",
     "vat-number-not-vies": "O número '%vat-number%' não está registado no sistema VIES",
     "vat-regime": "Regime de IVA",
     "VAT-register": "VAT registration",
@@ -1819,6 +1849,7 @@
     "wizard": "Assistente",
     "wizard-p": "Preencha este formulário sobre o seu negócio para concluir a configuração.",
     "wizard-plugins": "O assistente de plugins",
+    "work": "Trabalho",
     "work-certification": "Certificação",
     "work-events": "Eventos de trabalho",
     "working-hours": "Horário de trabalho",
