--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -234,7 +234,13 @@
     "center": "Centre",
     "certificate": "Certificat",
     "change": "Canviar",
+    "change-customer": "Canviar client",
     "change-password-online-warning": "Si esta instal·lació va a estar online, hauria de canviar la contrasenya per una més segura.",
+    "change-warehouse": "Canviar magatzem",
+    "changed-agent-to": "L'agent %oldAgent% ha canviat per l'agent %newAgent%",
+    "changed-customer-to": "S'ha canviat el client %oldCustomer% pel client %newCustomer%",
+    "changed-status-to": "Canvi d'estat abans %oldStatus%, ara %newStatus%",
+    "changed-user-to": "L'usuari %oldUser% ha canviat per l'usuari %newUser%",
     "channel": "Canal",
     "charge": "Cobrar",
     "charge-date": "Data de càrrec",
@@ -338,6 +344,7 @@
     "convert-into-supplier": "Convertir en proveïdor",
     "cookies": "Cookies",
     "copy": "Copia",
+    "copy-attachments": "Copiar fitxers adjunts",
     "copy-p": "Empleni el formulari per a fer una còpia d'aquest model",
     "copy-subaccounts": "Copiar pla de comptes",
     "core-update": "Actualització del nucli a la versió %version%",
@@ -490,6 +497,7 @@
     "different-than": "Diferent de",
     "disable": "Desactivar",
     "disable-plugins": "Desactivar connectors",
+    "disable-stock-management": "No controlar estoc (en treballs)",
     "disabled": "Desactivat",
     "disabled-plugins": "Plugins desactivats",
     "discharge-date": "Data d'alta: %date%",
@@ -526,6 +534,7 @@
     "drag": "Arrastrar",
     "dto": "Desconte",
     "dto-2": "Dte. 2",
+    "duplicate-customer-name-or-cif": "Hi ha un client amb el mateix nom o CIF\/NIF",
     "duplicate-record": "Registre duplicat",
     "duplicated-reference": "Referència '%reference%' duplicada",
     "duplicated-request": "Petició duplicada",
@@ -714,6 +723,7 @@
     "from": "Des de",
     "from-accounting-entry": "Des d'assentament",
     "from-date": "Des del",
+    "from-hour": "Hora inici",
     "from-subaccount": "Des de subcompte",
     "full-access": "Accés complet",
     "full-path": "Ruta sancera",
@@ -725,6 +735,8 @@
     "generate-accounting-entries": "Generar assentaments",
     "generate-accounting-entry": "Generar assentament contable",
     "generate-doc-type": "Generar tipo de document",
+    "generate-document": "Generar document",
+    "generate-document-desc": "Afegeix una línia al principi del document amb la informació seleccionada",
     "generate-invoice": "Crear factura",
     "generate-receipts": "Crear Rebuts",
     "generate-settlements": "Generar liquidacions",
@@ -988,6 +1000,7 @@
     "mail-test-ok": "La prova del correu s'ha eixecutat correctament.",
     "mailer": "Controlador de correu",
     "main-address": "Direcció principal",
+    "make-invoice": "Fes factura",
     "manage": "Administrar",
     "manage-installation": "Gestionar",
     "manual": "Manual",
@@ -1089,6 +1102,7 @@
     "nick": "Sobrenom",
     "no": "No",
     "no-admin": "No és administrador",
+    "no-agent": "Sin agente",
     "no-data": "No hi han senyes",
     "no-data-received-form": "Cap dada rebuda pel formulari",
     "no-devices-detected-scan-usb": "No s'han detectat dispositius. Proveu a escanejar.",
@@ -1104,6 +1118,7 @@
     "no-selected-item": "No hi ha cap element seleccionat",
     "no-stock": "No hi ha estoc",
     "no-updates-now": "No hi ha actualitzacions en aquest moment",
+    "no-works-to-invoice": "No hi ha treballs per facturar",
     "non-editable-accounting-entry": "Assentament no editable",
     "non-editable-columns": "Columnes no editables: %columns%",
     "non-editable-document": "El document no es pot editar",
@@ -1128,6 +1143,7 @@
     "notices": "Avisos",
     "notification": "Notificació",
     "notifications": "Notificaciones",
+    "notified": "Notificat",
     "november": "Novembre",
     "number": "Número",
     "number-attachments": "Nº d'adjunts",
@@ -1159,6 +1175,7 @@
     "operator": "Operador",
     "option": "Opció",
     "optional": "opcional",
+    "optional-or-product": "Opcional. Si no s'escriu res s'usarà del producte.",
     "options": "Opcions",
     "options-button-header": "Maquetació i permisos",
     "order": "Encomanda",
@@ -1290,6 +1307,11 @@
     "print-price": "Imprimir preus",
     "print-quantity": "I",
     "print-ticket": "Print ticket",
+    "print-works": "print-works",
+    "print-works-description": "Imprimir descripció de treballs",
+    "print-works-price": "Imprimir preu de treballs",
+    "print-works-quantity": "Imprimir quantitat de treballs",
+    "print-works-reference": "Imprimir referència de treballs",
     "printed": "Imprès",
     "printing-format": "Format d'impressió",
     "printing-formats": "Formats d'impressió",
@@ -1406,6 +1428,7 @@
     "reset": "La configuració s'ha reiniciat correctament.",
     "resource": "Recurs",
     "respond": "Respondre",
+    "responsible": "Responsable",
     "restore": "Restaurar",
     "restore-data": "Restaurar senyes",
     "result": "Resultat",
@@ -1434,10 +1457,12 @@
     "scan-usb-devices": "Escanejar dispositius USB",
     "sdk": "SDK",
     "search": "Busca",
+    "search-customer": "Search customer",
     "search-document": "Escribe el número de %doctype% para buscar.",
     "search-in-all-pages": "Busca en todas las páginas del programa",
     "search-message": "Cercar missatge",
     "search-product": "Search product",
+    "searching": "Buscant",
     "seats": "Plazas",
     "second-hand": "Segona mà",
     "second-quarter": "2n trimestre",
@@ -1518,6 +1543,7 @@
     "soap-extension-not-installed": "La extensió SOAP no està activada en PHP. Contacta amb el teu proveïdor d'allotjament per activar-la.",
     "social-security-number": "Número de la Seguritat Social",
     "software": "Programari",
+    "solution": "Solució",
     "sort": "Orde",
     "sort-by-balance-asc": "Ordenar por saldo ascendente",
     "sort-by-balance-desc": "Ordenar per saldo descendent",
@@ -1586,6 +1612,7 @@
     "subject": "Assunt",
     "subtotal": "Subtotal",
     "subtract": "Restar",
+    "subtract-stock": "Restar estoc",
     "success": "success",
     "successive-tract": "tracte successiu",
     "sum": "Suma",
@@ -1642,6 +1669,7 @@
     "tax-debit-account": "Conte de dèbit per als imposts",
     "tax-transport": "Imposts del transport",
     "taxes": "Imposts",
+    "tel": "Tel.",
     "telemetry-data-to-send": "telemetry-data-to-send",
     "telephone-prefix": "Prefix telefònic",
     "template": "Plantilla",
@@ -1737,6 +1765,7 @@
     "unsafe-file-p": "Per motius de seguretat, impedim les descàrregues d'alguns tipus d'arxius, com aquest: %file%",
     "until-accounting-entry": "Fins a assentament",
     "until-date": "Fins a",
+    "until-hour": "Hora fi",
     "until-subaccount": "Fins a subcompte",
     "update": "Actualitza",
     "update-stock": "Actualitza l'estoc",
@@ -1778,6 +1807,7 @@
     "vat-document": "Document de l'IVA",
     "vat-exception": "Excepció d'IVA",
     "vat-number-is-short": "El número '%vat-number%' és massa curt",
+    "vat-number-not-valid": "%vat-number% no está registrado en el VIES",
     "vat-number-not-vies": "El número '%vat-number%' no està registrat en el sistema VIES",
     "vat-regime": "Règim de l'IVA",
     "VAT-register": "Llibre d'imposts",
@@ -1819,6 +1849,7 @@
     "wizard": "Assistent",
     "wizard-p": "Ompli este formulari sobre el teu negoci per a acabar la configuració",
     "wizard-plugins": "Un plugin és un complement que afig noves funcionalitats. Selecciona els plugins que vulgues activar immediatament, o fes-ho més tard des del panell de control.",
+    "work": "Treball",
     "work-certification": "Certificació",
     "work-events": "Esdeveniments de treball",
     "working-hours": "Horari de treball",
