--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -234,7 +234,13 @@
     "center": "Centro",
     "certificate": "Certifikát",
     "change": "Cambiar",
+    "change-customer": "Změnit zákazníka",
     "change-password-online-warning": "Pokud bude tato instalace online, měla by být heslo změněno na bezpečnější.",
+    "change-warehouse": "Změnit sklad",
+    "changed-agent-to": "Se ha cambiado el agente %oldAgent% por el agente %newAgent%",
+    "changed-customer-to": "Se ha cambiado el cliente %oldCustomer% por el cliente %newCustomer%",
+    "changed-status-to": "Cambio de estado, antes %oldStatus%, ahora %newStatus%",
+    "changed-user-to": "Se ha cambiado el usuario %oldUser% por el usuario %newUser%",
     "channel": "Canal",
     "charge": "Cobrar",
     "charge-date": "Fecha cargo",
@@ -338,6 +344,7 @@
     "convert-into-supplier": "Convertir en proveedor",
     "cookies": "Souhlasy se soubory cookie",
     "copy": "Copiar",
+    "copy-attachments": "Kopírovat přílohy",
     "copy-p": "Rellene el formulario para hacer una copia de este modelo",
     "copy-subaccounts": "Copiar plan contable",
     "core-update": "Actualización del núcleo a la versión %version%",
@@ -490,6 +497,7 @@
     "different-than": "Diferente que",
     "disable": "Desactivar",
     "disable-plugins": "Deaktivovat pluginy",
+    "disable-stock-management": "No controlar stock (en trabajos)",
     "disabled": "Desactivado",
     "disabled-plugins": "Deaktivované pluginy",
     "discharge-date": "Fecha de alta: %date%",
@@ -526,6 +534,7 @@
     "drag": "Arrastrar",
     "dto": "Dto.",
     "dto-2": "Dto. 2",
+    "duplicate-customer-name-or-cif": "Existuje zákazník se stejným jménem nebo CIF\/NIF",
     "duplicate-record": "Registro duplicado",
     "duplicated-reference": "Duplicitní reference '%reference%'",
     "duplicated-request": "Petición duplicada",
@@ -602,7 +611,7 @@
     "es-tax-exception-e6": "España: excepción por otra causa",
     "es-tax-exception-location-rules": "Španělsko: N2 Nepodléhá dani – Pravidla lokalizace služeb (články 69–70 LIVA, služby B2B v EU nebo mimo EU)",
     "es-tax-exception-n1": "es-tax-exception-n1",
-    "es-tax-exception-n5": "es-tax-exception-n5",
+    "es-tax-exception-n5": "Operace osvobozené v souladu s článkem 25 zákona o IGIC",
     "es-tax-exception-passive-subject": "Španělsko: N6 Přenesení daňové povinnosti (čl. 84 LIVA)",
     "es-tax-regime-agrarian": "Zvláštní režim zemědělství, chovu zvířat a rybolovu",
     "es-tax-regime-cash-criteria": "Hotovostní kritéria",
@@ -714,6 +723,7 @@
     "from": "Desde",
     "from-accounting-entry": "Desde asiento",
     "from-date": "Desde",
+    "from-hour": "Hora inicio",
     "from-subaccount": "Desde subcuenta",
     "full-access": "Acceso completo",
     "full-path": "Ruta completa",
@@ -725,6 +735,8 @@
     "generate-accounting-entries": "Generovat účetní záznamy",
     "generate-accounting-entry": "Generar asiento contable",
     "generate-doc-type": "Generar tipo de documento",
+    "generate-document": "Vygenerovat dokument",
+    "generate-document-desc": "Přidejte řádek na začátek dokumentu s vybranými informacemi.",
     "generate-invoice": "Crear factura",
     "generate-receipts": "Generar recibos",
     "generate-settlements": "Generar liquidaciones",
@@ -988,6 +1000,7 @@
     "mail-test-ok": "Prueba de email ejecutada correctamente",
     "mailer": "Controlador de correo",
     "main-address": "Dirección principal",
+    "make-invoice": "Hacer factura",
     "manage": "Administrar",
     "manage-installation": "Administrar",
     "manual": "Manual",
@@ -1089,6 +1102,7 @@
     "nick": "Apodo",
     "no": "No",
     "no-admin": "Neadmin",
+    "no-agent": "Sin agente",
     "no-data": "Sin datos",
     "no-data-received-form": "Ningún dato recibido por formulario",
     "no-devices-detected-scan-usb": "Žádná zařízení nebyla detekována. Zkuste provést skenování.",
@@ -1104,6 +1118,7 @@
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "No controlar stock",
     "no-updates-now": "V tuto chvíli nejsou žádné aktualizace",
+    "no-works-to-invoice": "No hay trabajos para facturar",
     "non-editable-accounting-entry": "Asiento no editable",
     "non-editable-columns": "Columnas no editables: %columns%",
     "non-editable-document": "Documento no editable",
@@ -1128,6 +1143,7 @@
     "notices": "Avisos",
     "notification": "Notificación",
     "notifications": "Notificaciones",
+    "notified": "Označený",
     "november": "Listopad",
     "number": "Número",
     "number-attachments": "Počet příloh",
@@ -1159,6 +1175,7 @@
     "operator": "Operador",
     "option": "Opción",
     "optional": "opcional",
+    "optional-or-product": "Opcional. Si no se escribe nada se usará la información del producto.",
     "options": "Opciones",
     "options-button-header": "Maquetación y permisos",
     "order": "Pedido",
@@ -1290,6 +1307,11 @@
     "print-price": "Imprimir precios",
     "print-quantity": "Imprimir cantidad",
     "print-ticket": "Imprimir ticket",
+    "print-works": "Imprimir trabajos",
+    "print-works-description": "Tisknout popis prací",
+    "print-works-price": "Tiskněte cenu prací",
+    "print-works-quantity": "Tisknout množství pracovních činů",
+    "print-works-reference": "Vytisknout referenci zakázek",
     "printed": "Impreso",
     "printing-format": "Formato de impresión",
     "printing-formats": "Formatos de impresión",
@@ -1406,6 +1428,7 @@
     "reset": "Restablecer",
     "resource": "Recurso",
     "respond": "Odpovědět",
+    "responsible": "Zodpovědný",
     "restore": "Restaurar",
     "restore-data": "Restaurar datos",
     "result": "Resultado",
@@ -1434,10 +1457,12 @@
     "scan-usb-devices": "Skenovat USB zařízení",
     "sdk": "SDK",
     "search": "Buscar",
+    "search-customer": "Buscar cliente",
     "search-document": "Escribe el número de %doctype% para buscar.",
     "search-in-all-pages": "Busca en todas las páginas del programa",
     "search-message": "Hledat zprávu",
     "search-product": "Buscar producto",
+    "searching": "Hledání",
     "seats": "Plazas",
     "second-hand": "Segunda mano",
     "second-quarter": "2. čtvrtletí",
@@ -1518,6 +1543,7 @@
     "soap-extension-not-installed": "Rozšíření SOAP není instalováno v PHP. Kontaktujte svého poskytovatele hostingu pro jeho aktivaci.",
     "social-security-number": "Número Seguridad Social",
     "software": "Software",
+    "solution": "Solución",
     "sort": "Orden",
     "sort-by-balance-asc": "Ordenar por saldo ascendente",
     "sort-by-balance-desc": "Ordenar por saldo descendente",
@@ -1586,6 +1612,7 @@
     "subject": "Asunto",
     "subtotal": "Subtotal",
     "subtract": "Restar",
+    "subtract-stock": "Restar stock",
     "success": "Éxito",
     "successive-tract": "následná trasa",
     "sum": "Součet",
@@ -1642,6 +1669,7 @@
     "tax-debit-account": "Cuenta de débito para impuestos",
     "tax-transport": "Impuestos del transporte",
     "taxes": "Impuestos",
+    "tel": "Tel.",
     "telemetry-data-to-send": "Las instalaciones registradas notifican periódicamente la versión de FacturaScripts, PHP, país, idioma y listado de plugins.",
     "telephone-prefix": "Telefonní předpona.",
     "template": "Plantilla",
@@ -1737,6 +1765,7 @@
     "unsafe-file-p": "Z bezpečnostních důvodů bráníme stahování některých typů souborů, jako je tento: %file%",
     "until-accounting-entry": "Hasta asiento",
     "until-date": "Hasta",
+    "until-hour": "Hora fin",
     "until-subaccount": "Hasta subcuenta",
     "update": "Actualizar",
     "update-stock": "Actualizar stock",
@@ -1778,6 +1807,7 @@
     "vat-document": "Documento",
     "vat-exception": "Excepción de IVA",
     "vat-number-is-short": "Číslo '%vat-number%' je příliš krátké",
+    "vat-number-not-valid": "%vat-number% no está registrado en el VIES",
     "vat-number-not-vies": "Číslo '%vat-number%' není registrováno v systému VIES",
     "vat-regime": "Régimen impuestos",
     "VAT-register": "Příhlášení k DPH",
@@ -1819,6 +1849,7 @@
     "wizard": "Asistente",
     "wizard-p": "Rellene este formulario sobre su negocio para terminar la configuración.",
     "wizard-plugins": "Un plugin es un complemento que añade nuevas funcionalidades. Selecciona los plugins que quieras activar inmediatamente, o hazlo más tarde desde el panel de control.",
+    "work": "Trabajo",
     "work-certification": "Certifikace",
     "work-events": "Pracovní události",
     "working-hours": "Pracovní hodiny",
