--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -234,7 +234,13 @@
     "center": "Centro",
     "certificate": "Certificado",
     "change": "mudar",
+    "change-customer": "Mudar cliente",
     "change-password-online-warning": "Se esta instalação ficar online, você deve alterar a senha para uma mais segura.",
+    "change-warehouse": "Trocar armazém",
+    "changed-agent-to": "O agente %oldAgent% foi alterado para o agente %newAgent%",
+    "changed-customer-to": "O cliente foi alterado de %oldCustomer% para %newCustomer%",
+    "changed-status-to": "Estado alterado de %oldStatus% para %newStatus%",
+    "changed-user-to": "O usuário foi alterado de %oldUser% para %newUser%",
     "channel": "Canal",
     "charge": "Cobrar",
     "charge-date": "Data de cobrança",
@@ -338,6 +344,7 @@
     "convert-into-supplier": "Converter em fornecedor",
     "cookies": "Cookies",
     "copy": "Copiar",
+    "copy-attachments": "Copiar anexos",
     "copy-p": "Preencha o formulário antes de fazer a cópia deste modelo",
     "copy-subaccounts": "Copiar subcontas",
     "core-update": "Atualização do núcleo para a versão %version%",
@@ -484,12 +491,13 @@
     "destination-warehouse": "Armazém de destino",
     "detail": "Detalhe",
     "details": "Detalhes",
-    "detected-usb-devices": "Dispositivos USB detectados",
+    "detected-usb-devices": "Dispositivos USB detetados",
     "difference": "diferença",
     "different-passwords": "As senhas não correspondem para o usuário %userNick%",
     "different-than": "Diferente de",
     "disable": "Desativar",
     "disable-plugins": "Desativar plugins",
+    "disable-stock-management": "Não controlar stock (em trabalhos)",
     "disabled": "Desativado",
     "disabled-plugins": "Plugins desativados",
     "discharge-date": "Data de descarga: %date%",
@@ -526,6 +534,7 @@
     "drag": "Arrastar",
     "dto": "Desconto",
     "dto-2": "Dto. 2",
+    "duplicate-customer-name-or-cif": "Já existe um cliente com o mesmo nome ou CIF\/NIF",
     "duplicate-record": "Registro duplicado",
     "duplicated-reference": "Referência '%reference%' duplicada",
     "duplicated-request": "Solicitação duplicada",
@@ -714,6 +723,7 @@
     "from": "Desde",
     "from-accounting-entry": "De lançamento",
     "from-date": "Desde",
+    "from-hour": "Da hora",
     "from-subaccount": "de subconta",
     "full-access": "Acesso completo",
     "full-path": "Caminho completo",
@@ -725,6 +735,8 @@
     "generate-accounting-entries": "Gerar lançamentos contábeis",
     "generate-accounting-entry": "Gerar lançamento contábil",
     "generate-doc-type": "Gerar tipo de documento",
+    "generate-document": "Gerar documento",
+    "generate-document-desc": "Adiciona uma linha no início do documento com as informações selecionadas",
     "generate-invoice": "Gerar fatura",
     "generate-receipts": "Gerar recibos",
     "generate-settlements": "Gerar liquidações",
@@ -988,6 +1000,7 @@
     "mail-test-ok": "Prova de email satisfatória",
     "mailer": "Controlador de email",
     "main-address": "Endereço principal",
+    "make-invoice": "fazer-fatura",
     "manage": "Gerir",
     "manage-installation": "Gerenciar",
     "manual": "Manual",
@@ -1089,6 +1102,7 @@
     "nick": "Apelido",
     "no": "Não",
     "no-admin": "Não administrador",
+    "no-agent": "Sem agente",
     "no-data": "Sem dados",
     "no-data-received-form": "Nenhum dado recebido do formulário",
     "no-devices-detected-scan-usb": "Nenhum dispositivo foi detectado. Tente escanear.",
@@ -1104,6 +1118,7 @@
     "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem controle de estoque",
     "no-updates-now": "Não há atualizações neste momento",
+    "no-works-to-invoice": "Sem trabalhos para faturar",
     "non-editable-accounting-entry": "Asiento contábil não editável",
     "non-editable-columns": "Colunas não editáveis: %columns%",
     "non-editable-document": "Documento não editável",
@@ -1128,6 +1143,7 @@
     "notices": "Notificações",
     "notification": "Notificação",
     "notifications": "Notificações",
+    "notified": "Notificado",
     "november": "Novembro",
     "number": "Número",
     "number-attachments": "Nº de anexos",
@@ -1159,6 +1175,7 @@
     "operator": "Operador",
     "option": "Opção",
     "optional": "opcional",
+    "optional-or-product": "Opcional. Se nada for escrito, será usado do produto.",
     "options": "Opções",
     "options-button-header": "Maquetação e permissões",
     "order": "Pedido",
@@ -1290,6 +1307,11 @@
     "print-price": "Imprimir preços",
     "print-quantity": "Imprimir quantidade",
     "print-ticket": "Imprimir bilhete",
+    "print-works": "Imprimir Trabalhos",
+    "print-works-description": "Imprimir descrição de trabalhos",
+    "print-works-price": "Imprimir preço dos trabalhos",
+    "print-works-quantity": "Imprimir quantidade de trabalhos",
+    "print-works-reference": "Imprimir referência de trabalhos",
     "printed": "Impresso",
     "printing-format": "Formato de impressão",
     "printing-formats": "Formatos de impressão",
@@ -1406,6 +1428,7 @@
     "reset": "O programa de configuração foi reiniciado com êxito, pressione <a href='0#advanced'> aqui <\/a> para continuar.",
     "resource": "Recurso",
     "respond": "Responder",
+    "responsible": "Responsável",
     "restore": "Restaurar",
     "restore-data": "Restaurar dados",
     "result": "Resultado",
@@ -1434,10 +1457,12 @@
     "scan-usb-devices": "Escanear dispositivos USB",
     "sdk": "SDK",
     "search": "Pesquisar",
+    "search-customer": "Procurar cliente",
     "search-document": "Digite o número do %doctype% para pesquisar.",
     "search-in-all-pages": "Pesquisar em todas as páginas do programa",
     "search-message": "Buscar mensagem",
     "search-product": "Buscar produto",
+    "searching": "B",
     "seats": "Assentos",
     "second-hand": "Segunda mão",
     "second-quarter": "2.º trimestre",
@@ -1518,6 +1543,7 @@
     "soap-extension-not-installed": "A extensão SOAP não está instalada em PHP. Entre em contato com seu provedor de hospedagem para ativá-la.",
     "social-security-number": "Número de Segurança Social",
     "software": "Software",
+    "solution": "Solução",
     "sort": "Ordenar",
     "sort-by-balance-asc": "Ordenar por saldo ascendente",
     "sort-by-balance-desc": "Ordenar por saldo decrescente",
@@ -1586,6 +1612,7 @@
     "subject": "Assunto",
     "subtotal": "Subtotal",
     "subtract": "Tirar do estoque",
+    "subtract-stock": "Tirar do estoque",
     "success": "Sucesso",
     "successive-tract": "Entrega em cadeia",
     "sum": "Soma",
@@ -1642,6 +1669,7 @@
     "tax-debit-account": "Conta de débito para impostos",
     "tax-transport": "Impostos do transporte",
     "taxes": "Impostos",
+    "tel": "Tel.",
     "telemetry-data-to-send": "dados de telemetria para enviar",
     "telephone-prefix": "Prefixo telefônico",
     "template": "Template",
@@ -1737,6 +1765,7 @@
     "unsafe-file-p": "Por motivos de segurança, impedimos o download de alguns tipos de arquivos, como este: %file%",
     "until-accounting-entry": "Até entrada contábil",
     "until-date": "Até a data",
+    "until-hour": "até-hora",
     "until-subaccount": "até a subconta",
     "update": "Atualizar",
     "update-stock": "Atualizar estoque",
@@ -1757,7 +1786,7 @@
     "use-holes-invoices-esp": "Se desmarcar o uso de lacunas nas faturas e excluir alguma, permanecerá a lacuna na faturação e você terá problemas com a receita",
     "user": "Usuário",
     "user-and-config": "Usuário e configuração",
-    "user-guide": "Guia do usuário",
+    "user-guide": "Guia do utilizador",
     "users": "Usuários",
     "using-apc": "Usando o cache APC",
     "using-filecache": "Usando o Filecache",
@@ -1778,6 +1807,7 @@
     "vat-document": "Documento de IVA",
     "vat-exception": "Exceção de IVA",
     "vat-number-is-short": "O número '%vat-number%' é muito curto",
+    "vat-number-not-valid": "%vat-number% no está registrado en el VIES",
     "vat-number-not-vies": "O número '%vat-number%' não está registrado no sistema VIES",
     "vat-regime": "Regime de impostos",
     "VAT-register": "Registro de VAT",
@@ -1819,6 +1849,7 @@
     "wizard": "Assistente",
     "wizard-p": "Preencha este formulário sobre o seu negócio para concluir a configuração.",
     "wizard-plugins": "O assistente de plugins",
+    "work": "Trabalho",
     "work-certification": "Certificação",
     "work-events": "Eventos de trabalho",
     "working-hours": "Horário de trabalho",
